--- a/The_war_of_genesis_III.html
+++ b/The_war_of_genesis_III.html
@@ -37,17 +37,17 @@
     <font size="6">SKILLS</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_II.html" class="inactive">The War of Genesis II</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_III.html" class="active">The War of Genesis III</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_taiji.html" class="inactive">The War of Taiji</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Rhapsody_of_Zephyr.html" class="inactive">Rhapsody of Zephyr</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="以虞待不虞者勝.html" class="inactive">以虞待不虞者勝</a></li>
     <br>
 
     <font size="6">INVENTORY</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_and_reality.html" class="inactive">Game & Reality</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Ancient_spells.html" class="inactive">Ancient Spells</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_and_reality.html" class="inactive">Game & Reality</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
   </ul>
 
 
@@ -250,17 +250,17 @@
     <font size="6">SKILLS</font>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_II.html" class="inactive">The War of Genesis II</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis_III.html" class="active">The War of Genesis III</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_taiji.html" class="inactive">The War of Taiji</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Rhapsody_of_Zephyr.html" class="inactive">Rhapsody of Zephyr</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="以虞待不虞者勝.html" class="inactive">以虞待不虞者勝</a></li>
     <br>
 
     <font size="6">INVENTORY</font>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_and_reality.html" class="inactive">Game & Reality</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="Ancient_spells.html" class="inactive">Ancient Spells</a></li>
-    <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
     <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_and_reality.html" class="inactive">Game & Reality</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
   </ul>
 
   </div>
