--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div>
           <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="The_war_of_genesis_II.html" class="inactive" style="color:#2874A6">The War of Genesis II</a></li>
           <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="The_war_of_genesis_III.html" class="inactive" style="color:#2874A6">The War of Genesis III</a></li>
-          <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="The_war_of_taiji.html" class="inactive" style="color:#2874A6">The War of Taiji</a></li>
+          <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="Rhapsody_of_Zephyr.html" class="inactive" style="color:#2874A6">Rhapsody of Zephyr</a></li>
           <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="Strategy_and_tactics.html" class="inactive" style="color:#2874A6">Strategy & Tactics</a></li>
           <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="Merriam_Webster's.html" class="inactive" style="color:#2874A6">Merriam Webster's</a></li>
           <li style="background-color:#212F3C; margin-top:3px; margin-bottom:3px;"><a href="以虞待不虞者勝.html" class="inactive" style="color:#2874A6">以虞待不虞者勝</a></li>
@@ -86,10 +86,11 @@
     </ul>
     <ul class="column2" align="center" style="font-size: 25px; background-color:#3498DB; list-style: none; margin-top:0px; margin-bottom:0px;">
         <div>
-          <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="Game_and_reality.html" class="inactive" style="color:#3498DB">Game & Reality</a></li>
           <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="Ancient_spells.html" class="inactive" style="color:#3498DB">Ancient Spells</a></li>
-          <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="Science_and_technology.html" class="inactive" style="color:#3498DB">Science & Tech.</a></li>
           <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="The_economist.html" class="inactive" style="color:#3498DB">The Economist</a></li>
+          <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="Game_and_reality.html" class="inactive" style="color:#3498DB">Game & Reality</a></li>
+          <li style="background-color:#283747; margin-top:3px; margin-bottom:3px;"><a href="Science_and_technology.html" class="inactive" style="color:#3498DB">Science & Tech.</a></li>
+
         </div>
     </ul>
   </div>
