--- a/Game_and_reality.html
+++ b/Game_and_reality.html
@@ -50,7 +50,7 @@
   <div id="contents">
     <img src="stormbringer.gif" width="100%">
 
-  <h1>Game & Reality[Lv.10]</h1><br>
+  <h1>Game & Reality[Lv.11]</h1><br>
   <h2 style="text-align:center">Reality is a game</h2><br><br><br>
 
 
@@ -61,10 +61,177 @@
 
 
 
-  <a></a>
+  <a></a><a></a>
   <br>
-  [Media Keywords Farming] - 설민석의 벌거벗은 세계사(12/26/2020)<br>
-  ㅇㄻㄹㄹ
+  [Stone of Jordan Farming](+2EXP)<br>
+  설민석의 벌거벗은 세계사(12/26/2020)<br><br>
+
+  난징 - 양쯔강 남쪽의 대도시/
+  푸쯔먀오 - 공자를 모시는 사당/
+  난징을 수도로 삼은 정권은 10개/
+  중국 내에서도 역사가 깊은 도시/
+  북경: 베이징/
+  남경: 난징/
+  왕기가 가득한 도시/
+  양쯔강을 피로 물들이는 사건 발생/
+  난징 대학살 by 일본/
+  일본 제국주의 야욕의 시작/
+  생체실험/
+  왜 일본 전범들은 처벌받지 않는가/
+  우리가 꼭 기억해야 할 아픔의 역사/
+  히틀러는 6년 동안 500만 명 학살/
+  일본은 난징에서 6주동안 30만명 학살/
+  중국에서는 난징 대도살로 부름/
+  도쿄일일신문 사진/
+  1937년 12월/
+  연장전/
+  일본군의 내기에 대한 기사/
+  칼로 목베기 시합/
+  기사로 실린 일본군의 중국인 참수 시합/
+  스프츠처럼 보도/
+  참수 150명으로 연장전/
+  100명 넘게 베니까 칼날이 상하네요/
+  히틀러는 명분으로 혈통을 강조/
+  일본 만행의 정점에는 일왕 히로히토가 있었다/
+  히로히토의 명령과 묵인하에 아시아의 수많은 사람들이 죽었다/
+  천황 폐하의 뜻에 따라/
+  일본에겐 성전/
+  124대 일왕 히로히토/
+  일본의 선조는 태양의 신/
+  일본에게 천황은 신/
+  1조 대일본 제국은 만세일계의 천황이 통치한다/
+  2조 천황은 신성하여 침해하여서는 안 된다/
+  3조 천황은 육해공군을 통수한다/
+  천황이 지나가면 2층집 x - 신을 내려보면 안되서/
+  신의 명령으로 합리화 한 전쟁/
+  팔굉일우: 팔방을 덮어 집으로 삼음, 전 세계를 일왕에 귀속시켜야 한다/
+  대륙 침략을 위한 일본의 큰 그림/
+  1차세계대전: 독오 영프...미 + 일/
+  일본은 1차세계대전을 하늘이 일본을 도왔다고 인식/
+  산둥반도에 위치한 도시 칭다오 / 독일 조차지/
+  청일전쟁 러일전쟁 승리/
+  1910년 대한제국 강제 병합/
+  300년전 도요토미 히데요시가 이루지 못한 꿈/
+  만주사변/
+  남만주철도 폭발사건 / 자작극 / 전쟁의 구실/
+  만주를 점령하고 만주국을 세운다/
+  신해혁명으로 붕괴된 청나라 왕조/
+  청나라 황제 푸이를 만주국의 대표로 앉힘/
+  사실상 일본의 꼭두각시/
+  UN의 전신인 국제연맹 회의 소집/
+  국제연맹은 만주국을 비난/
+  일본은 국제연맹 탈퇴/
+  상하이 사변/
+  탕구 정전 협정-톈진점령/
+  노구교 사건 / 일본군과 중국군의 대치/
+  톈진 상하이를 거쳐 난징까지 공격/
+  당시 중화민국 국민당의 총통 / 장제스/
+  수도를 충칭으로 옮기고 결사 항전을 준비/
+  난징에 남은 15만명의 중국 군대/
+  1937년 중일전쟁 때 중국의 수도였던 난징을 점령한 후 벌인 학살/
+  위장한 군인들을 색출/
+  난징을 침략한 일본군은 패잔병을 처리한다는 명목으로 어떤 흔적이 있는 사람들을 찾았다/
+  굳은살과 모자자국->농민들/
+  중국정부의 항복을 받아내기 위해 공포정치 -> 학살/
+  6주에 30만(중국측 주장)/
+  국제연뱅 본부 - 스위스/
+  제네바 협약 / 전쟁 희생자 보호 위함/
+  난징대학살(한국) / 난징도살(중국) / 난징사건(일본)/
+  나치가 난징대학살을 듣고 히틀러가 짐승만도 못하다가 말함/
+  욘 라베 - 20만명을 구하다/
+  중국 지사로 파견되 30년간 근무(독일인)/
+  독일로 돌아가려는 시점에 베이징 함락 후 난징으로 일본이 쳐들어온다는 소식을 들음/
+  방공협정 이용/
+  난징에 있는 외국인들을 모아 국제위원회 조직/
+  내가 목숨을 걸고 위험을 무릅쓸 가치가 있다고 판단/
+  지하실 방공호 / 중국인들 숨겨줌/
+  너무 많이 몰려서 질식사 위험 초래/
+  문을 열어주고 집정원도 내어줌/
+  욘 라베의 집에서 폭탄으로부터 안전한 곳으로 불렸다는 곳은?/
+  마치 국기로 천막을 만듬/
+  하켄크로이츠를 이용/
+  난징 안전지대를 설립/
+  직접 안전지대 순찰함/
+  당시 상황을 일기로 남김/
+  히틀러에게 도움 요청/
+  1년 동안 살려낸 중국인이 25만명/
+  미국인 선교사 보트린/
+  최초의 여자대학교 설립/
+  일본인이 들어와 위안소로 만듬/
+  난징의 살아있는 영웅이라고 동상 세움/
+  아이리스 장 / 재미화교/
+  난징의 강간, 그 진실의 기록(책)/
+  협박과 위협에 시달리다 자살/
+  하얼빈 / 영하 30도까지 내려감/
+  중국에서 가장 추움/
+  얼음축제 세계 3대 겨울축제/
+  안중근 기념관/
+  하얼빈 야시장/
+  식도락의 도시/
+  구운 냉면/
+  동방의 모스크바 / 동서양의 만남/
+  안중근 기념관/
+  이토 히로부미 사살 시각 오전 9시 30분에 시계 고정/
+  하얼빈 수용소/
+  수감자들의 대우가 좋았음/
+  마루타 731부대 현장 30분 거리/
+  피실험자를 통나무 취급했다고 해서 마루타로 불렀다는 설도 있음/
+  이시이 시로 / 마루타 실험을 주도/
+  7331 부대 부대장 / 창설자/
+  세균전과 실전용 실험이 목적/
+  일왕 직속 부대 / 세균전 부대/
+  사방의 벽이 실험실/
+  실험자의 피를 뽑다가 건강상태가 안좋으면 독극물 등으로 사살/
+  패전 후 모든 문서를 소각하고 피실험자 사살/
+  반일 정서가 강해서 이용가치가 없는 자/
+  조선인들 3000명/
+  맥아더 / 미국에선 명장 / 인천상륙작전/
+  이시이 시로를 도와준 사람이 맥아더/
+  미국 정부와 맥아더 장군은 왜 이시이 시로를 도왔나/
+  독일의 생체 실험 자료를 소련이 가져가서/
+  미국은 일본의 생체 실험 자료를 가져가면서 합의/
+  히로히토는 전범 재판에 서지 않음/
+  미국과 맥아더가 빼줌/
+  일본 사회가 붕괴되는 것을 막는 것이 미국의 국익/
+  일본이 붕괴되면 소련을 견제하기 힘들어짐/
+  일왕 히로히토는 인간선언/
+  자신을 현인신으로 말하는 것을 부인하기는 했지만/
+  자신은 신의 후손이라고 말함/
+  괴소리/
+  일왕 중심의 헌법을 미국이 바꿈/
+  일왕에게 몰려있던 권한이 국민에게 돌아감/
+  민주화가 미국으로부터 떨어짐/
+  우리의 신이 죽었다며 일본 국민은 통곡/
+  도조 히데키 / 진주만 공습의 주역 / 사형/
+  오카와 슈메이 / 극우파 지식인/
+  전쟁을 옹호한 전범/
+  사형이 확정된 A급 전범오카와 슈메이의 재판 결과가 바뀐 이유?/
+  미친척으로 불기소/
+  극동 국제 군사 재판/
+  도조 히데키의 뒤통수를 때림/
+  갑자기 기돌르 하거나 미친 듯이 웃고 흐느낌/
+  기시 노부스케 / A급 전범인데 공직 박탈/
+  복직 후 총리대신까지 오름/
+  이 사람이 만든게 자민당/
+  딸이 낳은 자식이 아베/
+  전범 DNA가 아직까지 일본을 지배/
+  아베는 기시 노부스케를 롤모델로 삼음/
+  야스쿠니 신사 / 평화의 나라라는 뜻/
+  일본 군인은 전사 시 야스쿠니 신사에 매장되는 것을 영광으로 여김/
+  A급 전범을 야스쿠니에 합사 / 1978년/
+  스가 요시히데 / 현 일본 총리 / 최근 공물 보냄/
+  전후 세대들은 교육을 못받음/
+  역사서를 쓸 권한을 자민당이 가짐/
+  독일은 나치 정권이 물러나고 집권당이 바뀜/
+  일본은 만년 집권당인 자민당이 계속 통치/
+  자신들이 핵 맞은 피해자라고 주장/
+  역사와 경제가 병행되어야 한다/
+  경제 발전 문화 교류라는 우리 국익을 위한 노력이 병행되어야 한다/
+  입체적 접근/
+  애치슨 라인 / 미국의 극동방위선/
+  맥아더는 미국의 국익만 생각/
+  차가운 머리로 실제 있었던 역사를 냉정하게 비판해야 함/
+  우리가 잘 사는 게 복수다
   <br><br>
 
   <a href="https://www.youtube.com/watch?v=j4XCBDikLHQ" target="_blank" title="아쿠멘터리">
