--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -59,6 +59,14 @@
 
 
 
+
+
+  <a href="https://www.youtube.com/watch?v=Gt_cv6FUbcw" target="_blank" title="5분 뚝딱 철학">
+    포퍼 : 반증가능성 (feat. 아들러, 맑스, 검은 백조)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=XJD_T6oYMoM" target="_blank" title="5분 뚝딱 철학">
+    플로티누스 : 일자이론</a><br>
+
   <a href="https://www.youtube.com/watch?v=LF_nq5RAY5Y" target="_blank" title="5분 뚝딱 철학">
     새로운 귀납의 문제 (feat. 넬슨 굿맨, 스윈번)</a><br>
 
@@ -642,7 +650,7 @@
       그런 다음 그 신호들을 해석해서
       행동을 컨트롤하기 위해 그 정보를 세포로 보냅니다.
       그래서 뇌의 기능은 인식이고, 그 인식으로부터 마음을 창조합니다.
-      통계를 보면, 수술을 포함한 의학적 칠료의 1/3은 플라시보 효과의 결과라고 합니다.
+      통계를 보면, 수술을 포함한 의학적 치료의 1/3은 플라시보 효과의 결과라고 합니다.
       부정적인 생각이 있는 경우 이것을 노시보 효과라고 부릅니다.
       긍정적 생각이 당신을 치료하는 같은 힘으로
       부정적인 생각이 당신을 죽일 수도 있죠.
