--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -51,7 +51,7 @@
     <img src="설화난영참.jpg" width="100%">
 
 
-  <h1>Strategy & Tactics[Lv.12]</h1><br><br><br>
+  <h1>Strategy & Tactics[Lv.13]</h1><br><br><br>
 
 
 
@@ -59,6 +59,55 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=q4Urs9b2RbY" title="인문채널휴 HUE">
+    [임용한의 전쟁사] 한국사 최고의 전술과 전투(6): 관음포 해전</a><br>
+
+  <a href="https://www.youtube.com/watch?v=GlW2uUI9FII" title="인문채널휴 HUE">
+    [임용한의 전쟁사] 조선수군과 이순신에 대한 오해(2) : 이순신에 대한 역대급 오해 5</a><br>
+
+  <a href="https://www.youtube.com/watch?v=qXOmwMWk1E4" title="인문채널휴 HUE">
+    [임용한의 전쟁사] 조선수군에 대한 역대급 오해 1부</a><br><br>
+
+  <a href="https://www.youtube.com/watch?v=zY4E8QTkm3o" title="인문채널휴 HUE">
+    한국사 최고의 전투와 전술(5)-신라의 군량수송작전</a><br>
+
+    <a></a>
+    답이 있는 방법을 시행하는 것도 어렵다.<br>
+    답이 없는 모험에 도전하는 것은 전사에서 가장 존중해 주어야 할 용기이다.
+    <br><br>
+
+  <a href="https://www.youtube.com/watch?v=KE-waFxvUqw" title="인문채널휴 HUE">
+    한국사 최고의 전술과 전투(4)-묘청의 난 2부</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ddBfCNxCmXc" title="인문채널휴 HUE">
+    한국사최고의 전술과 전투(4)-묘청의 난 1부</a><br><br>
+
+  <a href="https://www.youtube.com/watch?v=Jp1QGfZdXKc" title="인문채널휴 HUE">
+    한국사 최고의 전술과 전투 베스트 10(3) 박서의 귀주성 전투</a><br>
+
+    <a></a>
+    승리할 자격이 있는 병사들이 승리를 쟁취한다.
+    <br><br>
+
+  <a href="https://www.youtube.com/watch?v=LJ-x5GYzAYQ" title="인문채널휴 HUE">
+    한국사 최고의 전술과 전투(2) - 귀주대첩(수정본)</a><br>
+
+    <a></a>
+    적의 결정적인 실수와 오판을 유도하는 것이 최고의 전술 중 하나다.<br>
+    * 고려의 승리 요인:<br>
+    1. 실전으로 다져진 군대<br>
+    2. 우수한 지휘관과 장교진<br>
+    3. 거란에 굴복하지 않겠다는 확고한 신념
+    <br><br>
+
+  <a href="https://www.youtube.com/watch?v=shB93huT1cU" title="인문채널휴 HUE">
+    한국사 최고의 전술과 전투 베스트 10(1)</a><br>
+
+    <a></a>
+    강한 것에서 강한 것이 나오는 것이 아니다.
+    용기와 대담함으로 약한 것을 극복하는 집단만이 진정으로 강한 집단으로 성장할 수 있다.
+    <br><br>
 
   <a href="https://www.youtube.com/watch?v=tlcEEcXTjAc" target="_blank" title="쉬운바둑">
     [실전사활 14강] 양걸침봉쇄 - 구차해도 살아봅시다~</a><br>
