--- a/懲毖錄.html
+++ b/懲毖錄.html
@@ -51,7 +51,7 @@
   <div id="contents">
     <img src="remember.jpg" width="100%">
 
-    <h1 style="text-align:center">懲毖錄[Lv.18]</h1><br>
+    <h1 style="text-align:center">懲毖錄[Lv.19]</h1><br>
     <h3 style="text-align:center">豫其懲而毖役患(미리 징계하여 후환을 경계한다)<br>
       -『시경(詩經)』 소비편(小毖篇)</h3><br><br>
   <br>
@@ -59,6 +59,19 @@
 
 
 
+
+
+
+
+
+  <a href="https://www.youtube.com/watch?v=TesJk3ll2E0" title="써에이스쇼">
+    삼국지보다 재미있는 정사 초한지 Part 12 (홍문의연회)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=dysW-bx4S8U" title="써에이스쇼">
+    삼국지보다 재미있는 정사 초한지 Part 11</a><br>
+
+  <a href="https://www.youtube.com/watch?v=T1_619MOJYM" title="써에이스쇼">
+    삼국지보다 재미있는 정사 초한지 Part 10 (거록대전)</a><br>
 
   <a>신삼국지TV시리즈 E95</a><br>
   <a>신삼국지TV시리즈 E94</a><br>
