--- a/The_war_of_genesis_II.html
+++ b/The_war_of_genesis_II.html
@@ -67,7 +67,7 @@
 
 
 
-
+  <a>안드로이드 JAVA : 02. Java - 16. 리스트 (실습)</a><br>
   <a>안드로이드 JAVA : 02. Java - 15. 리스트 (개념)</a><br>
   <a>안드로이드 JAVA : 02. Java - 14. 배열 (실습)</a><br>
   <a>안드로이드 JAVA : 02. Java - 13. 배열 (개념)</a><br>
