--- a/The_war_of_genesis_III.html
+++ b/The_war_of_genesis_III.html
@@ -66,8 +66,8 @@
 
 
 
-
-  <a>class101 자청 자동수익 강의 Welcome-2</a><br>
+  <a>class101 자청 자동수익 강의 Welcome-3</a><br>
+  <a>class101 자청 자동수익 강의 Welcome-2</a><br><br>
 
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
