--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -61,9 +61,20 @@
 
 
 
+    <a></a>
+    [스틱! 114p] 스티커 메시지를 만드는 과정은 다음과 같다.<br>
+    1) 당신이 소통해야 할 중심 메시지를 파악한다. 즉, 핵심을 찾아라.<br>
+    2) 메시지의 반직관적 요소를 찾아낸다. 예를 들어, 당신의 핵심 메시지는 어떠한 의외성을 함축하고 있는가? 어째서 그런 점이 지금껏 드러나지 않았는가?<br>
+    3) 청중의 추측 기제를 충격적이고 반직관적인  방식으로 깨뜨림으로써 메시지를 전달한다. 그런 다음 그들이 새로운 추측 기제를 구축할 수 있도록 도와라.
+    <br><br>
 
+    <a></a>
+    [스틱! 113p] 자신의 메세지를 스티커처럼 만들고 싶다면 다른 이들의 추측 기제를 망가뜨린 다음 그것을 다시 수리해야 한다. 문제는 추측 기제를 파괴하는 과정에서 늑대 광고와 같은 가짜 놀라움을 핗해야 한다는 것이다. 가짜 놀라움을 예방하고 자신의 놀라운 메시지에 통찰력을 주입하는 가장 손쉬운 방법은 자신의 핵심 메시지와 관련된 사람들의 추측 기제에 초점을 맞추는 것이다.
+    <br><br>
 
-
+    <a></a>
+    [스틱! 112p] 놀라움을 느끼려면 예측할 수 없어야 한다. 놀라움이란 '예측 가능'의 반대말이다. 그러나 사람을 놀라게 할 뿐 아니라 만족하게 하려면, 놀라움은 반드시 예측이 가능해야 한다.
+    <br><br>
 
     <a></a>
     [스틱! 109p] 놀라움은 우리가 어째서 놀라게 되었는지, 그 해답을 추구하도록 만든다. 놀라움의 강도가 크면 클수록 우리는 커다란 해답을 요구한다. 사람들의 관심을 끌고 싶은가? 그렇다면 크게 놀라게 하라. 그러나 놀라움만을 추구하다가는 자칫 커다란 문제를 야기할 수 있다. 속임수의 영역으로 넘어갈 수 있기 때문이다.
@@ -139,7 +150,7 @@
     단순해지라는 건 '정보의 수준을 낮추라'거나 '간단한 요약문을 만들라'는 의미가 아니다. 단순하다는 것은 쉬운 말만 골라 쓰는 게 아니기 때문이다. 여기서 '단순'의 정확한 개념은 메시지의 '핵심'을 찾으라는 의미다.
     그리고 '핵심을 찾으라'는 말은 곧 메시지를 한 꺼풀 한 꺼풀 벗겨내어 그 한가운데 숨어 있는 본질을 발견하라는 뜻이다. 핵심에 이르기 위해서는 남아돌거나 불필요한 요소들을 모두 제거해야 한다. 하지만 이는 그나마 쉬운 과정에 속한다. 정말로 어려운 부분은, 중요하지만 '가장 중요하지는 않은' 메시지를 제거하는 일이다. 군대의 CI는 장교들에게 작전행동에서 가장 중요한 목표를 주지시킨다. CI의 가치는 그 '유일함'에서 비롯된다. 북극성이 다섯 개나 될 수는 없다. '가장 중요한 목표'가 다섯 개나 있을 리는 만무하며 지휘관의 의도 역시 다섯 개가 될 수 없다. 핵심을 찾는 일은 지휘관의 의도를 결정하는 것과도 같다. 가장 중요한 통찰력을 밝게 빛내기 위해 나머지 훌륭한 통찰력은 모두 가져다 버리는 것이다.
     프랑스 비행사이자 작가인 생텍쥐페리가 간결함에 대해 참으로 멋들어진 정의를 내린 적이 있다. "완벽함이란 더 이상 보탤 것이 남아 있지 않을 때가 아니라 더 이상 뺄 것이 없을 때 완성된다." 단순한 메시지를 추구하는 이들도 마찬가지다. 메시지가 핵심을 잃기 전에 쓸모없는 것들은 모두 벗기고 짜내야  한다.
-    (중략) 스티커 메시지를 만드는 데 필요한 과정은 다 두가지다. 첫째는 핵심을 찾는 것, 그리고 두 번째는 그 핵심을 SUCCESs 체크리스트를 이용해 다른 언어로 옮기는 것이다.
+    (중략) 스티커 메시지를 만드는 데 필요한 과정은 단 두가지다. 첫째는 핵심을 찾는 것, 그리고 두 번째는 그 핵심을 SUCCESs 체크리스트를 이용해 다른 언어로 옮기는 것이다.
     <br><br>
 
     <a></a>
@@ -163,13 +174,13 @@
     <a></a>
     [스틱! 36p] 원칙 6 스토리(Story)<br>
     우리가 전한 메시지대로 상대방이 행동하게 하려면 어떻게 해야 할까? 스토리를 들려주어라. 소방수들은 한 번 출동할 때마다 동료들과 서로의 경험을 이야기하며 스토리를 교환한다. 그럼으로써 그들은 화재 현장에서 마주할 수 있는 다양한 상황들과 적절한 대응책에 관해 더 완벽하고 풍부한 정신적 대응책을 마련할 수 있는 것이다.
-    여러 연구에 따르면, 특정 상황에 대해 머릿속으로 미리 예행 연습을 해두면 실제로 그런 상황이 닥쳤을 때 훨씬 유용하고 효과적인 행동을 취할 수 있다고 한다. 이와 마찬가지로 스토리는 일종의 정신 자극제 역할ㅇ르 함으로써 뜻하지 않은 상황에 더욱 신속하고 효율적으로 대처하도록 도와준다.
+    여러 연구에 따르면, 특정 상황에 대해 머릿속으로 미리 예행 연습을 해두면 실제로 그런 상황이 닥쳤을 때 훨씬 유용하고 효과적인 행동을 취할 수 있다고 한다. 이와 마찬가지로 스토리는 일종의 정신 자극제 역할을 함으로써 뜻하지 않은 상황에 더욱 신속하고 효율적으로 대처하도록 도와준다.
     <br><br>
 
     <a></a>
     [스틱! 35-36p] 원칙 5 감성(Emotion)<br>
     우리가 말하는 메시지를 상대방이 중요하게 받아들이도록 하려면 어떻게 해야 하는가? 무언가를 '느끼게' 만들어야 한다. 영화관 팝콘 스토리는 사람들이 팝콘의 유해성을 깨닫고 혐오감을 느끼도록 부추겼다. '포화지방 37그램'이라는 숫자는 아무런 감정도 불러일으키지 않는다. 연구조사에 따르면, 사람들은 빈민층 집단보다 한 개인에게 자선을 베푸는 경향이 더 크다.
-    우리는 같은 사람에게 감정을 느끼지, 추상적인 개념에는 아무런 느낌도 받지 못한다. 때로 이 부분에서 가장 어려운 점은 자극을 해야 할 적절한 감정을 찾아내는 것이다. 이를테면 10대 흡연 청소년들에게 담배의 유해성을 상기시키는 것은 그리 효과적인 방법이 아니다. 하지만 거대 담배회사의 표리부도한 행동을 알려줌으로써 반발심을 자극한다면 금연열풍을 훨씬 강하게 일으킬 수 있다.
+    우리는 같은 사람에게 감정을 느끼지, 추상적인 개념에는 아무런 느낌도 받지 못한다. 때로 이 부분에서 가장 어려운 점은 자극을 해야 할 적절한 감정을 찾아내는 것이다. 이를테면 10대 흡연 청소년들에게 담배의 유해성을 상기시키는 것은 그리 효과적인 방법이 아니다. 하지만 거대 담배회사의 표리부동한 행동을 알려줌으로써 반발심을 자극한다면 금연열풍을 훨씬 강하게 일으킬 수 있다.
     <br><br>
 
     <a></a>
@@ -181,14 +192,14 @@
     <a></a>
     [스틱! 34p] 원칙 3 구체성(Concreteness)<br>
     메시지를 명확하게 만들려면 어떻게 해야 하는가? 실질적 행위와 감각적 정보의 언어로 설명한다. 바로 이 지점에서 수많은 비즈니스 커뮤니케이션이 잘못된 방향으로 빗나가곤 한다. 사명선언문, 시너지, 전략, 비전 등의 말은 대개 애매모호하고 허황되며 아무런 의미도 담겨 있지 않다.
-    선천성 스티커 메시지는 구체적이고 상세한 이미지(얼음으로 가득 찬 욕조 면도날이 박혀 있는 사과 등)들로 가득하다. 왜냐하면 우리의 두뇌는 구체적인 정보를 기억하도록 만들어져 있기 때문이다.
+    선천성 스티커 메시지는 구체적이고 상세한 이미지(얼음으로 가득 찬 욕조, 면도날이 박혀 있는 사과 등)들로 가득하다. 왜냐하면 우리의 두뇌는 구체적인 정보를 기억하도록 만들어져 있기 때문이다.
     속담은 대개 추상적인 진리를 구체적인 언어로 표현한다. "손 안에 든 새 한 마리가 덤불 속 두 마리보다 낫다." 구체적인 설명이야 말로 우리의 메시지가 청중 한 사람 한 사람에게 동일한 의미를 전달할 수 있는 유일한 길이다.
     <br><br>
 
     <a></a>
     [스틱! 33-34p] 원칙 2 의외성(Unexpectedness)<br>
     사람들이 우리의 메시지에 관심을 갖게 만들려면 어떻게 해야 하는가? 그리고 어떻게 그 관심을 유지시킬 것인가? 해결책은 사람들의 예상을 깨뜨리는 것이다. 직관에 반하는 결론을 내세워라.
-    (중략) 사람들의 관심을 끌려면 그들의 허를 찔러 긴장감을 높이고 이목을 집중시켜야 한다. 그러나 놀라움이라는 감정은 오랫동안 지속되지 않는다. 반드시 사람들의 흥미와 호기심을 자극해야 한다. 1년에 48시간자리 역사 수업에 아이들이 계속 집중하게 만들려면 어떻게 해야 할까? 오랜 시간에 걸쳐 사람ㄷ믈의 지식에 구조적인 '공백을 열어주면' 호기심을 유발할 수 있다. 그런 다음 그 빈틈을 채우줘라.
+    (중략) 사람들의 관심을 끌려면 그들의 허를 찔러 긴장감을 높이고 이목을 집중시켜야 한다. 그러나 놀라움이라는 감정은 오랫동안 지속되지 않는다. 반드시 사람들의 흥미와 호기심을 자극해야 한다. 1년에 48시간자리 역사 수업에 아이들이 계속 집중하게 만들려면 어떻게 해야 할까? 오랜 시간에 걸쳐 사람들의 지식에 구조적인 '공백을 열어주면' 호기심을 유발할 수 있다. 그런 다음 그 빈틈을 채워줘라.
     <br><br>
 
     <a></a>
@@ -254,7 +265,7 @@
     <a></a>
     [뇌, 욕망의 비밀을 풀다 365-366p] 이지 웹: 쉬운 조작과 몰입<br>
     온라인 쇼핑몰의 경우 다음의 사항들이 중요하다. 얼마나 단순하며 접근하기 쉬운가? 안내는  얼마나 심플하게 되어 있는가? (중략) 우리 뇌의 인지 및 감정 시스템은 밀접하게 얽혀 있기 때문에 인지 과부하에 걸리면 좌절과 스트레스의 감정반응이 일어난다. 문제는 좌절감과 스트레스를 느낄 때 기분만 처지는 것이 아니라 구매욕구도 함께 뚝 떨어진다는 데 있다. 물론 우리의 생각도 변한다.
-    기분이 좋은 상태에서는 뇌가 열려 있고 새롭게 발생하는 구매충동을 처리할 여유가 있기 때문에 이것이 추가 구매로 이어진다. 반면 좌절하고 스트레스를 받는 상황에서는 인지 ㅂ범위가 완전히 좁아진다. 그리고 우리 뇌는 도피할 준비를 한다. 반면 ㅁ웹의 세계를 재미있고 단순하게 다루는 사람의 뇌는 '몰입' 상태에 들어갈 준비를 한다. 모든 것이 아주 쉽게 흘러가고 활기찬 기분 상태가 유지된다.
+    기분이 좋은 상태에서는 뇌가 열려 있고 새롭게 발생하는 구매충동을 처리할 여유가 있기 때문에 이것이 추가 구매로 이어진다. 반면 좌절하고 스트레스를 받는 상황에서는 인지 범위가 완전히 좁아진다. 그리고 우리 뇌는 도피할 준비를 한다. 반면 웹의 세계를 재미있고 단순하게 다루는 사람의 뇌는 '몰입' 상태에 들어갈 준비를 한다. 모든 것이 아주 쉽게 흘러가고 활기찬 기분 상태가 유지된다.
     <br><br>
 
     <a></a>
@@ -265,7 +276,7 @@
 
     <a></a>
     [뇌, 욕망의 비밀을 풀다 360p] 상품 소개는 매력적이어야 하며 한눈에 들어와야 한다.
-    기존의 오프라인 구매행위에서도 인지와 감정의 관점에서 공략하는 것이 합리적이다. 인지적 측면, 즉 기능적 측면부터 살펴보자. 이때 중요한 것은 제품이 제공할 수 있는 몯느 것을 쉽고 단순하게 전달하는 것이다. 하지만 제품이 제공할 수 없는 것을 알려주는 것도 중요하다. 제품이 고객의 기대를 충족시키지 못한다면 그것은 판매에 실패한 것과 같다. 그럴 경우 고객은 비싼 비용을 지불하고 구매한 제품을 반품한다.
+    기존의 오프라인 구매행위에서도 인지와 감정의 관점에서 공략하는 것이 합리적이다. 인지적 측면, 즉 기능적 측면부터 살펴보자. 이때 중요한 것은 제품이 제공할 수 있는 모든 것을 쉽고 단순하게 전달하는 것이다. 하지만 제품이 제공할 수 없는 것을 알려주는 것도 중요하다. 제품이 고객의 기대를 충족시키지 못한다면 그것은 판매에 실패한 것과 같다. 그럴 경우 고객은 비싼 비용을 지불하고 구매한 제품을 반품한다.
     이제 감정적 측면으로 넘어가자. 웹에서도 제품을 어떻게 소개하는지, 또 얼마나 매력적으로 보이게 하는지가 중요하다. 완벽하고 훌륭하게 감정화시킨 제품의 경우 웹의 전환율이 급상승한다.
     <br><br>
 
@@ -293,7 +304,7 @@
     <br><br>
 
     <a></a>
-    [뇌, 욕망의 비밀을 풀다 325p] 효율적 쇼핑을 자극하는 원동력은 지배 시스템이다. 필수품과 일용품을 사는 고객은 기다리는 시간 없이 신속하게 진행된ㄴ 고효율 쇼핑을 원한다. 그래서 셀프 서비스를 선호한다. 셀프 서비스는 독립성과 자율성을 강화시키고 서비스 인력에 대한 의존도를 줄여 고객에게 주도권을 준다.  효율적 쇼핑을 할 때 고객들은 상품 선택으 ㅣ기회가 어느 정도 주어지길 바라지만, '체험 쇼핑'을 할 때처럼 새로운 것을 발견하길 바라지는 않는다. 그보다는 시간 절약을 원한다. 공격적인 덤핑 가격과 할인이 뇌의 지배 시스템을 자극한다.
+    [뇌, 욕망의 비밀을 풀다 325p] 효율적 쇼핑을 자극하는 원동력은 지배 시스템이다. 필수품과 일용품을 사는 고객은 기다리는 시간 없이 신속하게 진행되는 고효율 쇼핑을 원한다. 그래서 셀프 서비스를 선호한다. 셀프 서비스는 독립성과 자율성을 강화시키고 서비스 인력에 대한 의존도를 줄여 고객에게 주도권을 준다.  효율적 쇼핑을 할 때 고객들은 상품 선택의 기회가 어느 정도 주어지길 바라지만, '체험 쇼핑'을 할 때처럼 새로운 것을 발견하길 바라지는 않는다. 그보다는 시간 절약을 원한다. 공격적인 덤핑 가격과 할인이 뇌의 지배 시스템을 자극한다.
     <br><br>
 
     <a></a>
@@ -301,7 +312,7 @@
     <br><br>
 
     <a></a>
-    [뇌, 욕망의 비밀을 풀다 324p] 균형 시스템은 단순하고 편한 구매를 선호한다. 기능적 측면이 잘 드러난 상품 소개와 구매를 신속하게 결정하는 데 도움을 주는 단순한 안내를 원하는 것이다. 균형 시스템은 신뢰할 수 있는 품질으 ㅣ단순한 제품과 저렴한 가격(지속적으로 저렴한 가격)을 선호한다. 한편, 제품을 선택할 수 있는 폭넓은 기회는 뇌의 균형 시스템을 동요시킨다. 따라서 균형 시스템에서는 폭넓은 선택의 기회가 주어지는 것을 원하지 않는다.
+    [뇌, 욕망의 비밀을 풀다 324p] 균형 시스템은 단순하고 편한 구매를 선호한다. 기능적 측면이 잘 드러난 상품 소개와 구매를 신속하게 결정하는 데 도움을 주는 단순한 안내를 원하는 것이다. 균형 시스템은 신뢰할 수 있는 품질의 단순한 제품과 저렴한 가격(지속적으로 저렴한 가격)을 선호한다. 한편, 제품을 선택할 수 있는 폭넓은 기회는 뇌의 균형 시스템을 동요시킨다. 따라서 균형 시스템에서는 폭넓은 선택의 기회가 주어지는 것을 원하지 않는다.
     <br><br>
 
     <a></a>
@@ -310,7 +321,7 @@
     <br><br>
 
     <a></a>
-    [뇌, 욕망의 비밀을 풀다 320p] 잘못된 추론으로 인한 '오류'는 다양한 감각 체험뿐만 아니라, 시간적 순서에 따라 발생하는 사건들 사이에서도 발생한다. 제품 마케팅에서는 처음이 가장 중요하지만, 서비스 마케팅과 판매 프로세스에서는 마지막이 가장 중요하다. 서비스 프로세스를 극대화시키고 싶다면 큐 매니지먼트의 관점에서 각 단계를 점검하고, 우리 뇌에서 감정및 동기 프로그램이 어느 선까지 반영될 수 있는지 질문해봐야 한다.
+    [뇌, 욕망의 비밀을 풀다 320p] 잘못된 추론으로 인한 '오류'는 다양한 감각 체험뿐만 아니라, 시간적 순서에 따라 발생하는 사건들 사이에서도 발생한다. 제품 마케팅에서는 처음이 가장 중요하지만, 서비스 마케팅과 판매 프로세스에서는 마지막이 가장 중요하다. 서비스 프로세스를 극대화시키고 싶다면 큐 매니지먼트의 관점에서 각 단계를 점검하고, 우리 뇌에서 감정 및 동기 프로그램이 어느 선까지 반영될 수 있는지 질문해봐야 한다.
     (중략) 뇌는 많은 사건들 중 첫 번째 체험과 마지막 체험을 더 잘 기억하는 경향이 있다. 쉽게 말해 특정한 상황에 있는 고객에게 가장 중요한 것은 마지막이다. 마지막 기억은 끈질기게 남아 사라지지 않는다.
     <br><br>
 
@@ -324,7 +335,7 @@
     <br><br>
 
     <a></a>
-    [뇌, 욕망의 비밀을 풀다 317p] 사람들은 고객의 뇌가 이러한 정보를 어떻게 처리하는지 그 방법에 대해 큰 고나심ㅇ르 두지 않는다. 어쨌든 고객의 뇌는 일반화를 좋아한다. 감각 채널이 받아들인 감각 인상은 무의식적으로 다른 평가영역으로 전달되는데, 이는 교차 양상의 영향 때문이다.
+    [뇌, 욕망의 비밀을 풀다 317p] 사람들은 고객의 뇌가 이러한 정보를 어떻게 처리하는지 그 방법에 대해 큰 관심을 두지 않는다. 어쨌든 고객의 뇌는 일반화를 좋아한다. 감각 채널이 받아들인 감각 인상은 무의식적으로 다른 평가영역으로 전달되는데, 이는 교차 양상의 영향 때문이다.
     <br><br>
 
     <a></a>
@@ -341,7 +352,7 @@
     <br><br>
 
     <a></a>
-    [뇌, 욕망의 비밀을 풀다 308p] 재료도 고객의 동기 및 감정 시스템에서 주용한 의미를 갖는다. 가공하지 않은 천연 목재는 안락함과 따뜻함을 전달하고, 독특한 컬러와 눈에 띄는 형태의 프라스틱과 합성 화학 물질은 평범하고 급변하는 자극 시스템을 대변한다. 광택이 없는 금속은 지배 시스템에서 가장 인기가 많은 재질이다.
+    [뇌, 욕망의 비밀을 풀다 308p] 재료도 고객의 동기 및 감정 시스템에서 증요한 의미를 갖는다. 가공하지 않은 천연 목재는 안락함과 따뜻함을 전달하고, 독특한 컬러와 눈에 띄는 형태의 플라스틱과 합성 화학 물질은 평범하고 급변하는 자극 시스템을 대변한다. 광택이 없는 금속은 지배 시스템에서 가장 인기가 많은 재질이다.
     <br><br>
 
     <a></a>
@@ -376,10 +387,6 @@
     <a></a>
     [뇌, 욕망의 비밀을 풀다 298-299p] '물고기'와 같이 뇌  속에서 이미지를 연상시키는 단어(구상적 단어)는 '혼란'과 같은 추상적인 단어보다 우리 뇌에서 훨씬 빨리 처리된다.
     (중략) 이제 '키스'와 '물고기'를 비교해보자. 둘 다 구상적 단어다. '키스'의 경우 감정이 유발되는 반면, '물고기'는 그렇지 않다. 감정은 생명체가 빨리 행동하도록 재촉하기 때문에, 우리 뇌에서 감정은 우선통행권을 갖는다. 그래서 '키스'처럼 감정적 내용이 담긴 단어가 우리 뇌에서 특히 빨리 처리된다. 즉 우리 뇌는 감정적 내용이 있는 구상적 단어를 더 좋아한다.
-    <br><br>
-
-    <a></a>
-    [뇌, 욕망의 비밀을 풀다 298p] 좌뇌는 단어와 문법을 처리하는 반면, 우뇌는 언어의 분위기와 멜로디를 담당한다.
     <br><br>
 
     <a></a>
