--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -59,7 +59,8 @@
 
 
 
-
+  <a href="https://www.youtube.com/watch?v=ET0R0xy4ZqY" target="_blank" title="5분 뚝딱 철학">
+    레비-스트로스 : 구조주의 인류학</a><br>
 
   <a href="https://www.youtube.com/watch?v=Gt_cv6FUbcw" target="_blank" title="5분 뚝딱 철학">
     포퍼 : 반증가능성 (feat. 아들러, 맑스, 검은 백조)</a><br>
