--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -431,7 +431,7 @@
 
     <a></a>
     [뇌, 욕망의 비밀을 풀다 285-286p] 컬트 브랜드에는 그들만의 신화가 있다. 무엇보다 이런 컬트 브랜드 뒤에는 인격, 행동, 아이디어, 비전 측면에서 해당 브랜드와 밀접한 관련을 맺고 있는 사람들이 당당하게 버티고 서 있다.
-    (중략) 컬트 브랜드는 작지만 독창적인 특징을 지닌 사람과 견줄 수 있다. 컬트 브랜드는 살아 있으며, 매혹적인 이야기와 신화가 브랜드와 그 주변을 휘감고 있따. 이는 오늘날까지 브랜드의 이미지를 규정하고, 브랜드 제품에 반영된다. 이처럼 효과적인 신화는 매우 단순한 감정구조를 바탕으로 한다. 대부분 이런 브랜드 뒤에는 그 이름만으로도 신뢰감을 부여하고, 모든 것을 설명해주는 소유자나 소유자 가문이 버티고 있다. 컬트 브랜드는 깨끗하고 순수한 것이 아니라 오히려 제멋대로다. 컬트 브랜드가 더욱 큰 호감을 불러일으키는 것도 이런 이유 때문이다.
+    (중략) 컬트 브랜드는 작지만 독창적인 특징을 지닌 사람과 견줄 수 있다. 컬트 브랜드는 살아 있으며, 매혹적인 이야기와 신화가 브랜드와 그 주변을 휘감고 있다. 이는 오늘날까지 브랜드의 이미지를 규정하고, 브랜드 제품에 반영된다. 이처럼 효과적인 신화는 매우 단순한 감정구조를 바탕으로 한다. 대부분 이런 브랜드 뒤에는 그 이름만으로도 신뢰감을 부여하고, 모든 것을 설명해주는 소유자나 소유자 가문이 버티고 있다. 컬트 브랜드는 깨끗하고 순수한 것이 아니라 오히려 제멋대로다. 컬트 브랜드가 더욱 큰 호감을 불러일으키는 것도 이런 이유 때문이다.
     <br><br>
 
     <a></a>
@@ -464,7 +464,7 @@
 
     <a></a>
     [뇌, 욕망의 비밀을 풀다 262-263p] 해마는 신피질 내에서 동시에 활성화된 수천 개의 신경세포를 통해 여러 정보를 결합시켜 만든 전체적인 상을 신경 네트워크에 저장한다. 이런 종류의 신경브랜드 네트워크는 신피질 전역으로 광범위하게 뻗어나갈 수 있다. 브랜드의 시각적 요소는 시각적 자극을 처리하는 대뇌피질 후방에 저장된다(후두엽과 두정엽). 광고음악과 같은 음향 요소는 측면에 있는 측두엽에 저장된다. 브랜드 이미지의 감정적인 요소는 신피질 전방에 있는 영역인 안와전두피질과 편도체에 저장된다.
-    신경브랜드 이미지는 뇌 속에 있는 다양한 신경세포가 동시에 연결되어 광범위한 네트워크가 형성되면서 만들어진다. 상품과 감정적인 광고 메시지가 함께 등장하는 빈도가 높을수록 네트워크에 속해 있는 신경세포 사이의 결함이 더 강력해진다. 신경세포들이 반복해서 네트워크 이웃에 대해 말할수록 네트워크에 속해 있지 않은 다른 신경세포의 신호보다 그 신호에 더 빠르게 반응한다. 전문용어로 이런 메커니즘을 장기 강화라고 일컫는다.
+    신경브랜드 이미지는 뇌 속에 있는 다양한 신경세포가 동시에 연결되어 광범위한 네트워크가 형성되면서 만들어진다. 상품과 감정적인 광고 메시지가 함께 등장하는 빈도가 높을수록 네트워크에 속해 있는 신경세포 사이의 결합이 더 강력해진다. 신경세포들이 반복해서 네트워크 이웃에 대해 말할수록 네트워크에 속해 있지 않은 다른 신경세포의 신호보다 그 신호에 더 빠르게 반응한다. 전문용어로 이런 메커니즘을 장기 강화라고 일컫는다.
     (중략) 뇌의 학습 욕구는 나이가 들어감에 따라 급격히 감소한다. 더불어 새로운 신경브랜드 이미지를 확립하려는 의욕도 줄어든다. 어린이, 청소년, 젊은 사람들의 뇌는 새로운 신경 네트워크를 최대한 많이 구축하고 확립하게끔 프로그래밍되어 있다. 반면 나이 든 사람들의 뇌는 새로운 네트워크 구축에 저항하며 가급적 기존의 신경 네트워크와 경험을 바탕으로 인생을 이끌어나가려고 시도한다. 고객의 뇌에 브랜드의 지정석을 확실히 마련하고자 한다면 이런 점을 반드시 명심해야 한다. 이미 다양한 브랜드의 회사들이 그 일을 시행하는 중이다. 그들은 전자 게임, 어린이 만화책, 어린이 영화, 청소년 이벤트 등을 통해 어린이들에게 그들의 브랜드를 소개하는 데 많은 돈을 지출하고 있다.
     <br><br>
 
@@ -517,7 +517,7 @@
     <br><br>
 
     <a></a>
-    [뇌, 욕망의 비밀을 풀다 202p] 상품 카테고리에 대한 관심 역시 남녀 사이에 차이가 있다. 남성은 예측 가능하고, 세계를 지배하는 데 유용하며, 권력을 선사하는 기술 기반 제품을 좋아한다. 따라서 자동차, 기계, 기술 장비 등에 열관한다. 반면 여성은 소설과 예술처럼 상상력을 자극하는 상품과 물건에 강한 관심을 보인다. 또한 배려와 아늑함을 제공하는 물건들을 좋아한다.
+    [뇌, 욕망의 비밀을 풀다 202p] 상품 카테고리에 대한 관심 역시 남녀 사이에 차이가 있다. 남성은 예측 가능하고, 세계를 지배하는 데 유용하며, 권력을 선사하는 기술 기반 제품을 좋아한다. 따라서 자동차, 기계, 기술 장비 등에 열광한다. 반면 여성은 소설과 예술처럼 상상력을 자극하는 상품과 물건에 강한 관심을 보인다. 또한 배려와 아늑함을 제공하는 물건들을 좋아한다.
     <br><br>
 
     <a></a>
@@ -594,7 +594,7 @@
 
     <a></a>
     [뇌, 욕망의 비밀을 풀다 117p] '지성'은 '인식적' 지능이다. 지성으로 우리는 인과관계를 발견할 수 있고, 삶과 자연의 복잡성을 구조화할 수 있다. 즉 세계에 질서를 부여할 수 있다.
-    그런데 왜 우리는 세계에 질서를 부여할까? 첫째는 세계를 예측하고 통제하기 위해서고, 둘째는 세계를 지배하기 위해서도. 두 가지 이유 모두 굉장이 감정적인데, 모두 Limbic® 맵의 '규율/통제'에 나와 있다. 지성을 감정의 끄트머리에 달린 물방울로도 볼 수 있다.
+    그런데 왜 우리는 세계에 질서를 부여할까? 첫째는 세계를 예측하고 통제하기 위해서고, 둘째는 세계를 지배하기 위해서다. 두 가지 이유 모두 굉장히 감정적인데, 모두 Limbic® 맵의 '규율/통제'에 나와 있다. 지성을 감정의 끄트머리에 달린 물방울로도 볼 수 있다.
     하지만 지성과 관련해 다른 중요한 측면이 있다. 지성은 인생의 요구사항을 극복하기 위한 도구라는 점이다. 이 도구를 어떻게 사용하는지는 감정 시스템에 의해 결정된다. 지성으로 기관총을 만들 수도 있고(지배 시스템), 기아 문제로 심각한 개발도상국을 위해 관개시설을 만들 수도 있다.(돌봄 모듈).
     <br><br>
 
