--- a/The_war_of_genesis_II.html
+++ b/The_war_of_genesis_II.html
@@ -57,7 +57,7 @@
 
 
 
-  <h1>The War of Genesis II[Lv.95]</h1><br><br><br>
+  <h1>The War of Genesis II[Lv.96]</h1><br><br><br>
 
 
 
@@ -66,7 +66,7 @@
 
 
 
-
+  <a>안드로이드 JAVA : 02. Java - 17. [과제] 중간과제 설명</a><br>
   <a>안드로이드 JAVA : 02. Java - 16. 리스트 (실습)</a><br>
   <a>안드로이드 JAVA : 02. Java - 15. 리스트 (개념)</a><br>
   <a>안드로이드 JAVA : 02. Java - 14. 배열 (실습)</a><br>
