--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -59,6 +59,11 @@
 
 
 
+
+
+  <a href="https://www.youtube.com/watch?v=Tf_iOFQko30&t=74s" target="_blank" title="5분 뚝딱 철학">
+    러셀 : 기술이론 (feat. 프레게, 마이농)</a><br>
+
   <a href="https://www.youtube.com/watch?v=ET0R0xy4ZqY" target="_blank" title="5분 뚝딱 철학">
     레비-스트로스 : 구조주의 인류학</a><br>
 
