--- a/The_war_of_genesis_II.html
+++ b/The_war_of_genesis_II.html
@@ -65,54 +65,54 @@
 
 
 
-
-  <a>안드로이드 JAVA : 02. Java - 17. [과제] 중간과제 설명</a><br>
-  <a>안드로이드 JAVA : 02. Java - 16. 리스트 (실습)</a><br>
-  <a>안드로이드 JAVA : 02. Java - 15. 리스트 (개념)</a><br>
-  <a>안드로이드 JAVA : 02. Java - 14. 배열 (실습)</a><br>
-  <a>안드로이드 JAVA : 02. Java - 13. 배열 (개념)</a><br>
-  <a>안드로이드 JAVA : 02. Java - 12. 제어흐름2 (실습)</a><br>
-  <a>안드로이드 JAVA : 02. Java - 11. 제어흐름2 (개념)</a><br>
-  <a>안드로이드 JAVA : 02. Java - 10. 제어흐름 (실습)</a><br>
-  <a>안드로이드 JAVA : 02. Java - 09. 제어흐름 (개념)</a><br>
-  <a>안드로이드 JAVA : 02. Java - 08. 연산 (실습)</a><br>
-  <a>안드로이드 JAVA : 02. Java - 07. 연산자 (개념)</a><br>
-  <a>안드로이드 JAVA : 02. Java - 06. 메소드 (실습)</a><br>
-  <a>안드로이드 JAVA : 02. Java - 05. 메소드 (개념)</a><br>
-  <a>안드로이드 JAVA : 02. Java - 04. 변수,자료형 (실습)</a><br>
-  <a>안드로이드 JAVA : 02. Java - 03. 자료형 (개념)</a><br>
-  <a>안드로이드 JAVA : 02. Java - 02. 변수 (개념)</a><br>
-  <a>안드로이드 JAVA : 02. Java - 01. 자바란</a><br>
-  <a>안드로이드 JAVA : 01. View - 16. 과제 풀이 (3)</a><br>
-  <a>안드로이드 JAVA : 01. View - 15. 과제 풀이 (2)</a><br>
-  <a>안드로이드 JAVA : 01. View - 14. 과제 풀이 (1)</a><br>
-  <a>안드로이드 JAVA : 01. View - 13. [과제] 과제 설명</a><br>
-  <a>안드로이드 JAVA : 01. View - 12. Scrollview (실습)</a><br>
-  <a>안드로이드 JAVA : 01. View - 11. Scrollview (개념)</a><br>
-  <a>안드로이드 JAVA : 01. View - 10. FrameLayout (실습)</a><br>
-  <a>안드로이드 JAVA : 01. View - 09. FrameLayout (개념)</a><br>
-  <a>안드로이드 JAVA : 01. View - 08. Relativelayout (실습)</a><br>
-  <a>안드로이드 JAVA : 01. View - 07. Relativelayout (개념)</a><br>
-  <a>안드로이드 JAVA : 01. View - 06. Linearlayout (실습)</a><br>
-  <a>안드로이드 JAVA : 01. View - 05. Linearlayout (개념)</a><br>
-  <a>안드로이드 JAVA : 01. View - 04. 크기 (실습)</a><br>
-  <a>안드로이드 JAVA : 01. View - 03. 크기 (개념)</a><br>
-  <a>안드로이드 JAVA : 01. View - 02. 개요 (실습)</a><br>
-  <a>안드로이드 JAVA : 01. View - 01. 개요 (개념)</a><br>
-  <a>안드로이드 JAVA : 01. View - 14. 과제 풀이 (1)</a><br>
-  <a>안드로이드 JAVA : 01. View - 13. [과제] 과제 설명</a><br>
-  <a>안드로이드 JAVA : 01. View - 12. Scrollview (실습)</a><br>
-  <a>안드로이드 JAVA : 01. View - 11. Scrollview (개념)</a><br>
-  <a>안드로이드 JAVA : 01. View - 10. FrameLayout (실습)</a><br>
-  <a>안드로이드 JAVA : 01. View - 09. FrameLayout (개념)</a><br>
-  <a>안드로이드 JAVA : 01. View - 08. Relativelayout (실습)</a><br>
-  <a>안드로이드 JAVA : 01. View - 07. Relativelayout (개념)</a><br>
-  <a>안드로이드 JAVA : 01. View - 06. Linearlayout (실습)</a><br>
-  <a>안드로이드 JAVA : 01. View - 05. Linearlayout (개념)</a><br>
-  <a>안드로이드 JAVA : 01. View - 04. 크기 (실습)</a><br>
-  <a>안드로이드 JAVA : 01. View - 03. 크기 (개념)</a><br>
-  <a>안드로이드 JAVA : 01. View - 02. 개요 (실습)</a><br>
-  <a>안드로이드 JAVA : 01. View - 01. 개요 (개념)</a><br>
+  <a></a>안드로이드 JAVA : 02. Java - 18. [과제] 중간과제 풀이 영상<br>
+  <a></a>안드로이드 JAVA : 02. Java - 17. [과제] 중간과제 설명<br>
+  <a></a>안드로이드 JAVA : 02. Java - 16. 리스트 (실습)<br>
+  <a></a>안드로이드 JAVA : 02. Java - 15. 리스트 (개념)<br>
+  <a></a>안드로이드 JAVA : 02. Java - 14. 배열 (실습)<br>
+  <a></a>안드로이드 JAVA : 02. Java - 13. 배열 (개념)<br>
+  <a></a>안드로이드 JAVA : 02. Java - 12. 제어흐름2 (실습)<br>
+  <a></a>안드로이드 JAVA : 02. Java - 11. 제어흐름2 (개념)<br>
+  <a></a>안드로이드 JAVA : 02. Java - 10. 제어흐름 (실습)<br>
+  <a></a>안드로이드 JAVA : 02. Java - 09. 제어흐름 (개념)<br>
+  <a></a>안드로이드 JAVA : 02. Java - 08. 연산 (실습)<br>
+  <a></a>안드로이드 JAVA : 02. Java - 07. 연산자 (개념)<br>
+  <a></a>안드로이드 JAVA : 02. Java - 06. 메소드 (실습)<br>
+  <a></a>안드로이드 JAVA : 02. Java - 05. 메소드 (개념)<br>
+  <a></a>안드로이드 JAVA : 02. Java - 04. 변수,자료형 (실습)<br>
+  <a></a>안드로이드 JAVA : 02. Java - 03. 자료형 (개념)<br>
+  <a></a>안드로이드 JAVA : 02. Java - 02. 변수 (개념)<br>
+  <a></a>안드로이드 JAVA : 02. Java - 01. 자바란<br>
+  <a></a>안드로이드 JAVA : 01. View - 16. 과제 풀이 (3)<br>
+  <a></a>안드로이드 JAVA : 01. View - 15. 과제 풀이 (2)<br>
+  <a></a>안드로이드 JAVA : 01. View - 14. 과제 풀이 (1)<br>
+  <a></a>안드로이드 JAVA : 01. View - 13. [과제] 과제 설명<br>
+  <a></a>안드로이드 JAVA : 01. View - 12. Scrollview (실습)<br>
+  <a></a>안드로이드 JAVA : 01. View - 11. Scrollview (개념)<br>
+  <a></a>안드로이드 JAVA : 01. View - 10. FrameLayout (실습)<br>
+  <a></a>안드로이드 JAVA : 01. View - 09. FrameLayout (개념)<br>
+  <a></a>안드로이드 JAVA : 01. View - 08. Relativelayout (실습)<br>
+  <a></a>안드로이드 JAVA : 01. View - 07. Relativelayout (개념)<br>
+  <a></a>안드로이드 JAVA : 01. View - 06. Linearlayout (실습)<br>
+  <a></a>안드로이드 JAVA : 01. View - 05. Linearlayout (개념)<br>
+  <a></a>안드로이드 JAVA : 01. View - 04. 크기 (실습)<br>
+  <a></a>안드로이드 JAVA : 01. View - 03. 크기 (개념)<br>
+  <a></a>안드로이드 JAVA : 01. View - 02. 개요 (실습)<br>
+  <a></a>안드로이드 JAVA : 01. View - 01. 개요 (개념)<br>
+  <a></a>안드로이드 JAVA : 01. View - 14. 과제 풀이 (1)<br>
+  <a></a>안드로이드 JAVA : 01. View - 13. [과제] 과제 설명<br>
+  <a></a>안드로이드 JAVA : 01. View - 12. Scrollview (실습)<br>
+  <a></a>안드로이드 JAVA : 01. View - 11. Scrollview (개념)<br>
+  <a></a>안드로이드 JAVA : 01. View - 10. FrameLayout (실습)<br>
+  <a></a>안드로이드 JAVA : 01. View - 09. FrameLayout (개념)<br>
+  <a></a>안드로이드 JAVA : 01. View - 08. Relativelayout (실습)<br>
+  <a></a>안드로이드 JAVA : 01. View - 07. Relativelayout (개념)<br>
+  <a></a>안드로이드 JAVA : 01. View - 06. Linearlayout (실습)<br>
+  <a></a>안드로이드 JAVA : 01. View - 05. Linearlayout (개념)<br>
+  <a></a>안드로이드 JAVA : 01. View - 04. 크기 (실습)<br>
+  <a></a>안드로이드 JAVA : 01. View - 03. 크기 (개념)<br>
+  <a></a>안드로이드 JAVA : 01. View - 02. 개요 (실습)<br>
+  <a></a>안드로이드 JAVA : 01. View - 01. 개요 (개념)<br>
 
 
   <h2>[올인원 패키지 : 안드로이드 앱 개발]</h2>
