--- a/懲毖錄.html
+++ b/懲毖錄.html
@@ -64,6 +64,10 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=RDlCGhQ6l-Y" title="써에이스쇼">
+    삼국지보다 재미있는 정사 초한지 Part 14 (진평의 귀순)</a><br>
+
   <a href="https://www.youtube.com/watch?v=dEbxLncQRrM&t=1s" title="써에이스쇼">
     삼국지보다 재미있는 정사 초한지 Part 13 (국사무쌍 한신)</a><br>
 
