--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -679,7 +679,7 @@
     <br><br>
 
     <a></a>
-    [뇌, 욕망의 비밀을 풀다 56-57p] 빅 3의 마지막 감정 시스테인 지배 시스템은 경쟁자를 억압하거나 축출하는 것을 목표로 하기 때문에 이견이 분분하다. 지배 시스템은 사람들에게 각종 자원과 섹스 파트너를 둘러싼 싸움에서 경쟁자를 물리치고 자신의 권력을 구축하며, 영역을 확장하라고 지시한다. 지배 시스템은 다음과 같은 명령을 내린다.<br>
+    [뇌, 욕망의 비밀을 풀다 56-57p] 빅 3의 마지막 감정 시스템인 지배 시스템은 경쟁자를 억압하거나 축출하는 것을 목표로 하기 때문에 이견이 분분하다. 지배 시스템은 사람들에게 각종 자원과 섹스 파트너를 둘러싼 싸움에서 경쟁자를 물리치고 자신의 권력을 구축하며, 영역을 확장하라고 지시한다. 지배 시스템은 다음과 같은 명령을 내린다.<br>
     * 끝까지 관철시켜라!<br>
     * 지위를 얻고자 노력하라!<br>
     * 타인보다 더 나은 사람이 돼라!<br>
