--- a/The_war_of_genesis_III.html
+++ b/The_war_of_genesis_III.html
@@ -57,7 +57,7 @@
 
 
 
-  <h1>The War of Genesis III[Lv.22]</h1><br><br><br>
+  <h1>The War of Genesis III[Lv.21]</h1><br><br><br>
 
 
 
@@ -65,12 +65,29 @@
 
 
 
-  <a>class101 자청 자동수익 강의 1-1</a><br>
-  <a>class101 자청 자동수익 강의 Welcome-3</a><br>
-  <a>class101 자청 자동수익 강의 Welcome-2</a><br><br>
 
-  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
-  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+
+  <a></a><a></a>
+  PKROMEDA ACTIVATION: 1(+2EXP)<br>
+
+  <a></a>
+  class101 자청 자동수익 강의 1-2<br>
+
+  <a></a><a></a>
+  PKROMEDA ACTIVATION: 1(+2EXP)<br>
+
+  <a></a>
+  class101 자청 자동수익 강의 1-1<br>
+
+  <a></a><a></a>
+  PKROMEDA ACTIVATION: 1(+2EXP)<br>
+
+  <a></a>
+  class101 자청 자동수익 강의 Welcome-3<br>
+
+  <a></a>
+  class101 자청 자동수익 강의 Welcome-2<br>
+
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
@@ -78,147 +95,146 @@
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
   <a></a><a></a><a></a><a></a><a></a><a></a>
-  PKROMEDA ACTIVATION: 43(+86EXP)
-  <br><br>
+  PKROMEDA ACTIVATION: 33(+66EXP)<br>
 
-  <a>class101 자청 자동수익 강의 Welcome-1</a><br>
-  <a>class101 자청 자동수익 강의 Outro-1</a><br>
-  <a>class101 자청 자동수익 강의 8-5</a><br>
-  <a>class101 자청 자동수익 강의 8-4</a><br>
-  <a>class101 자청 자동수익 강의 8-3</a><br>
-  <a>class101 자청 자동수익 강의 8-2</a><br>
-  <a>class101 자청 자동수익 강의 8-1</a><br>
-  <a>class101 자청 자동수익 강의 7-13</a><br>
-  <a>class101 자청 자동수익 강의 7-12</a><br>
-  <a>class101 자청 자동수익 강의 7-11</a><br>
-  <a>class101 자청 자동수익 강의 7-10</a><br>
-  <a>class101 자청 자동수익 강의 7-9</a><br>
-  <a>class101 자청 자동수익 강의 7-8</a><br>
-  <a>class101 자청 자동수익 강의 7-7</a><br>
-  <a>class101 자청 자동수익 강의 7-6</a><br>
-  <a>class101 자청 자동수익 강의 7-5</a><br>
-  <a>class101 자청 자동수익 강의 7-4</a><br>
-  <a>class101 자청 자동수익 강의 7-3</a><br>
-  <a>class101 자청 자동수익 강의 7-2</a><br>
-  <a>class101 자청 자동수익 강의 7-1</a><br>
-  <a>class101 자청 자동수익 강의 6-7</a><br>
-  <a>class101 자청 자동수익 강의 6-6</a><br>
-  <a>class101 자청 자동수익 강의 6-5</a><br>
-  <a>class101 자청 자동수익 강의 6-4</a><br>
-  <a>class101 자청 자동수익 강의 6-3</a><br>
-  <a>class101 자청 자동수익 강의 6-2</a><br>
-  <a>class101 자청 자동수익 강의 6-1</a><br>
-  <a>class101 자청 자동수익 강의 5-15</a><br>
-  <a>class101 자청 자동수익 강의 5-14</a><br>
-  <a>class101 자청 자동수익 강의 5-13</a><br>
-  <a>class101 자청 자동수익 강의 5-12</a><br>
-  <a>class101 자청 자동수익 강의 5-11</a><br>
-  <a>class101 자청 자동수익 강의 5-10</a><br>
-  <a>class101 자청 자동수익 강의 5-9</a><br>
-  <a>class101 자청 자동수익 강의 5-8</a><br>
-  <a>class101 자청 자동수익 강의 5-7</a><br>
-  <a>class101 자청 자동수익 강의 5-6</a><br>
-  <a>class101 자청 자동수익 강의 5-5</a><br>
-  <a>class101 자청 자동수익 강의 5-4</a><br>
-  <a>class101 자청 자동수익 강의 5-3</a><br>
-  <a>class101 자청 자동수익 강의 5-2</a><br>
-  <a>class101 자청 자동수익 강의 5-1</a><br>
-  <a>class101 자청 자동수익 강의 4-6</a><br>
-  <a>class101 자청 자동수익 강의 4-5</a><br>
-  <a>class101 자청 자동수익 강의 4-4</a><br>
-  <a>class101 자청 자동수익 강의 4-3</a><br>
-  <a>class101 자청 자동수익 강의 4-2</a><br>
-  <a>class101 자청 자동수익 강의 4-1</a><br>
-  <a>class101 자청 자동수익 강의 3-6</a><br>
-  <a>class101 자청 자동수익 강의 3-5</a><br>
-  <a>class101 자청 자동수익 강의 3-4</a><br>
-  <a>class101 자청 자동수익 강의 3-3</a><br>
-  <a>class101 자청 자동수익 강의 3-2</a><br>
-  <a>class101 자청 자동수익 강의 3-1</a><br>
-  <a>class101 자청 자동수익 강의 2-6</a><br>
-  <a>class101 자청 자동수익 강의 2-5</a><br>
-  <a>class101 자청 자동수익 강의 2-4</a><br>
-  <a>class101 자청 자동수익 강의 2-3</a><br>
-  <a>class101 자청 자동수익 강의 2-2</a><br>
-  <a>class101 자청 자동수익 강의 2-1</a><br>
-  <a>class101 자청 자동수익 강의 1-7</a><br>
-  <a>class101 자청 자동수익 강의 1-6</a><br>
-  <a>class101 자청 자동수익 강의 1-5</a><br>
-  <a>class101 자청 자동수익 강의 1-4</a><br>
-  <a>class101 자청 자동수익 강의 1-3</a><br>
-  <a>class101 자청 자동수익 강의 1-2</a><br>
-  <a>class101 자청 자동수익 강의 1-1</a><br>
-  <a>class101 자청 자동수익 강의 인트로 3</a><br>
-  <a>class101 자청 자동수익 강의 인트로 2</a><br>
-  <a>class101 자청 자동수익 강의 인트로 1</a><br>
+    <a></a>class101 자청 자동수익 강의 Welcome-1<br>
+    <a></a>class101 자청 자동수익 강의 Outro-1<br>
+    <a></a>class101 자청 자동수익 강의 8-5<br>
+    <a></a>class101 자청 자동수익 강의 8-4<br>
+    <a></a>class101 자청 자동수익 강의 8-3<br>
+    <a></a>class101 자청 자동수익 강의 8-2<br>
+    <a></a>class101 자청 자동수익 강의 8-1<br>
+    <a></a>class101 자청 자동수익 강의 7-13<br>
+    <a></a>class101 자청 자동수익 강의 7-12<br>
+    <a></a>class101 자청 자동수익 강의 7-11<br>
+    <a></a>class101 자청 자동수익 강의 7-10<br>
+    <a></a>class101 자청 자동수익 강의 7-9<br>
+    <a></a>class101 자청 자동수익 강의 7-8<br>
+    <a></a>class101 자청 자동수익 강의 7-7<br>
+    <a></a>class101 자청 자동수익 강의 7-6<br>
+    <a></a>class101 자청 자동수익 강의 7-5<br>
+    <a></a>class101 자청 자동수익 강의 7-4<br>
+    <a></a>class101 자청 자동수익 강의 7-3<br>
+    <a></a>class101 자청 자동수익 강의 7-2<br>
+    <a></a>class101 자청 자동수익 강의 7-1<br>
+    <a></a>class101 자청 자동수익 강의 6-7<br>
+    <a></a>class101 자청 자동수익 강의 6-6<br>
+    <a></a>class101 자청 자동수익 강의 6-5<br>
+    <a></a>class101 자청 자동수익 강의 6-4<br>
+    <a></a>class101 자청 자동수익 강의 6-3<br>
+    <a></a>class101 자청 자동수익 강의 6-2<br>
+    <a></a>class101 자청 자동수익 강의 6-1<br>
+    <a></a>class101 자청 자동수익 강의 5-15<br>
+    <a></a>class101 자청 자동수익 강의 5-14<br>
+    <a></a>class101 자청 자동수익 강의 5-13<br>
+    <a></a>class101 자청 자동수익 강의 5-12<br>
+    <a></a>class101 자청 자동수익 강의 5-11<br>
+    <a></a>class101 자청 자동수익 강의 5-10<br>
+    <a></a>class101 자청 자동수익 강의 5-9<br>
+    <a></a>class101 자청 자동수익 강의 5-8<br>
+    <a></a>class101 자청 자동수익 강의 5-7<br>
+    <a></a>class101 자청 자동수익 강의 5-6<br>
+    <a></a>class101 자청 자동수익 강의 5-5<br>
+    <a></a>class101 자청 자동수익 강의 5-4<br>
+    <a></a>class101 자청 자동수익 강의 5-3<br>
+    <a></a>class101 자청 자동수익 강의 5-2<br>
+    <a></a>class101 자청 자동수익 강의 5-1<br>
+    <a></a>class101 자청 자동수익 강의 4-6<br>
+    <a></a>class101 자청 자동수익 강의 4-5<br>
+    <a></a>class101 자청 자동수익 강의 4-4<br>
+    <a></a>class101 자청 자동수익 강의 4-3<br>
+    <a></a>class101 자청 자동수익 강의 4-2<br>
+    <a></a>class101 자청 자동수익 강의 4-1<br>
+    <a></a>class101 자청 자동수익 강의 3-6<br>
+    <a></a>class101 자청 자동수익 강의 3-5<br>
+    <a></a>class101 자청 자동수익 강의 3-4<br>
+    <a></a>class101 자청 자동수익 강의 3-3<br>
+    <a></a>class101 자청 자동수익 강의 3-2<br>
+    <a></a>class101 자청 자동수익 강의 3-1<br>
+    <a></a>class101 자청 자동수익 강의 2-6<br>
+    <a></a>class101 자청 자동수익 강의 2-5<br>
+    <a></a>class101 자청 자동수익 강의 2-4<br>
+    <a></a>class101 자청 자동수익 강의 2-3<br>
+    <a></a>class101 자청 자동수익 강의 2-2<br>
+    <a></a>class101 자청 자동수익 강의 2-1<br>
+    <a></a>class101 자청 자동수익 강의 1-7<br>
+    <a></a>class101 자청 자동수익 강의 1-6<br>
+    <a></a>class101 자청 자동수익 강의 1-5<br>
+    <a></a>class101 자청 자동수익 강의 1-4<br>
+    <a></a>class101 자청 자동수익 강의 1-3<br>
+    <a></a>class101 자청 자동수익 강의 1-2<br>
+    <a></a>class101 자청 자동수익 강의 1-1<br>
+    <a></a>class101 자청 자동수익 강의 인트로 3<br>
+    <a></a>class101 자청 자동수익 강의 인트로 2<br>
+    <a></a>class101 자청 자동수익 강의 인트로 1<br>
 
-  <a>class101 신사임당 스마트스토어 강의 12-5</a><br>
-  <a>class101 신사임당 스마트스토어 강의 12-4</a><br>
-  <a>class101 신사임당 스마트스토어 강의 12-3</a><br>
-  <a>class101 신사임당 스마트스토어 강의 12-2</a><br>
-  <a>class101 신사임당 스마트스토어 강의 12-1</a><br>
-  <a>class101 신사임당 스마트스토어 강의 11-4</a><br>
-  <a>class101 신사임당 스마트스토어 강의 11-3</a><br>
-  <a>class101 신사임당 스마트스토어 강의 11-2</a><br>
-  <a>class101 신사임당 스마트스토어 강의 11-1</a><br>
-  <a>class101 신사임당 스마트스토어 강의 10-5</a><br>
-  <a>class101 신사임당 스마트스토어 강의 10-4</a><br>
-  <a>class101 신사임당 스마트스토어 강의 10-3</a><br>
-  <a>class101 신사임당 스마트스토어 강의 10-2</a><br>
+  <a></a>class101 신사임당 스마트스토어 강의 12-5<br>
+  <a></a>class101 신사임당 스마트스토어 강의 12-4<br>
+  <a></a>class101 신사임당 스마트스토어 강의 12-3<br>
+  <a></a>class101 신사임당 스마트스토어 강의 12-2<br>
+  <a></a>class101 신사임당 스마트스토어 강의 12-1<br>
+  <a></a>class101 신사임당 스마트스토어 강의 11-4<br>
+  <a></a>class101 신사임당 스마트스토어 강의 11-3<br>
+  <a></a>class101 신사임당 스마트스토어 강의 11-2<br>
+  <a></a>class101 신사임당 스마트스토어 강의 11-1<br>
+  <a></a>class101 신사임당 스마트스토어 강의 10-5<br>
+  <a></a>class101 신사임당 스마트스토어 강의 10-4<br>
+  <a></a>class101 신사임당 스마트스토어 강의 10-3<br>
+  <a></a>class101 신사임당 스마트스토어 강의 10-2<br>
 
   <a href="https://www.youtube.com/watch?v=ED7u2ygEzrc" target="_blank" title="일헥타르TV">
     하나라도 더 파는 진짜 방법｜마케팅 겨자씨</a><br>
 
-  <a>class101 신사임당 스마트스토어 강의 10-1</a><br>
-  <a>class101 신사임당 스마트스토어 강의 9-4</a><br>
-  <a>class101 신사임당 스마트스토어 강의 9-3</a><br>
-  <a>class101 신사임당 스마트스토어 강의 9-2</a><br>
-  <a>class101 신사임당 스마트스토어 강의 9-1</a><br>
-  <a>class101 신사임당 스마트스토어 강의 8-4</a><br>
-  <a>class101 신사임당 스마트스토어 강의 8-3</a><br>
-  <a>class101 신사임당 스마트스토어 강의 8-2</a><br>
-  <a>class101 신사임당 스마트스토어 강의 8-1</a><br>
-  <a>class101 신사임당 스마트스토어 강의 7-6</a><br>
-  <a>class101 신사임당 스마트스토어 강의 7-5</a><br>
-  <a>class101 신사임당 스마트스토어 강의 7-4</a><br>
-  <a>class101 신사임당 스마트스토어 강의 7-3</a><br>
-  <a>class101 신사임당 스마트스토어 강의 7-2</a><br>
-  <a>class101 신사임당 스마트스토어 강의 7-1</a><br>
-  <a>class101 신사임당 스마트스토어 강의 6-6</a><br>
-  <a>class101 신사임당 스마트스토어 강의 6-5</a><br>
-  <a>class101 신사임당 스마트스토어 강의 6-4</a><br>
-  <a>class101 신사임당 스마트스토어 강의 6-3</a><br>
-  <a>class101 신사임당 스마트스토어 강의 6-2</a><br>
-  <a>class101 신사임당 스마트스토어 강의 6-1</a><br>
-  <a>class101 신사임당 스마트스토어 강의 5-8</a><br>
-  <a>class101 신사임당 스마트스토어 강의 5-7</a><br>
-  <a>class101 신사임당 스마트스토어 강의 5-6</a><br>
-  <a>class101 신사임당 스마트스토어 강의 5-5</a><br>
-  <a>class101 신사임당 스마트스토어 강의 5-4</a><br>
-  <a>class101 신사임당 스마트스토어 강의 5-3</a><br>
-  <a>class101 신사임당 스마트스토어 강의 5-2</a><br>
-  <a>class101 신사임당 스마트스토어 강의 5-1</a><br>
-  <a>class101 신사임당 스마트스토어 강의 4-5</a><br>
-  <a>class101 신사임당 스마트스토어 강의 4-4</a><br>
-  <a>class101 신사임당 스마트스토어 강의 4-3</a><br>
-  <a>class101 신사임당 스마트스토어 강의 4-2</a><br>
-  <a>class101 신사임당 스마트스토어 강의 4-1</a><br>
-  <a>class101 신사임당 스마트스토어 강의 3-5</a><br>
-  <a>class101 신사임당 스마트스토어 강의 3-4</a><br>
-  <a>class101 신사임당 스마트스토어 강의 3-3</a><br>
-  <a>class101 신사임당 스마트스토어 강의 3-2</a><br>
-  <a>class101 신사임당 스마트스토어 강의 3-1</a><br>
-  <a>class101 신사임당 스마트스토어 강의 2-5</a><br>
-  <a>class101 신사임당 스마트스토어 강의 2-4</a><br>
-  <a>class101 신사임당 스마트스토어 강의 2-3</a><br>
-  <a>class101 신사임당 스마트스토어 강의 2-2</a><br>
-  <a>class101 신사임당 스마트스토어 강의 2-1</a><br>
-  <a>class101 신사임당 스마트스토어 강의 1-4</a><br>
-  <a>class101 신사임당 스마트스토어 강의 1-3</a><br>
-  <a>class101 신사임당 스마트스토어 강의 1-2</a><br>
-  <a>class101 신사임당 스마트스토어 강의 1-1</a><br>
-  <a>class101 신사임당 스마트스토어 강의 0-2</a><br>
-  <a>class101 신사임당 스마트스토어 강의 0-1</a><br>
+  <a></a>class101 신사임당 스마트스토어 강의 10-1<br>
+  <a></a>class101 신사임당 스마트스토어 강의 9-4<br>
+  <a></a>class101 신사임당 스마트스토어 강의 9-3<br>
+  <a></a>class101 신사임당 스마트스토어 강의 9-2<br>
+  <a></a>class101 신사임당 스마트스토어 강의 9-1<br>
+  <a></a>class101 신사임당 스마트스토어 강의 8-4<br>
+  <a></a>class101 신사임당 스마트스토어 강의 8-3<br>
+  <a></a>class101 신사임당 스마트스토어 강의 8-2<br>
+  <a></a>class101 신사임당 스마트스토어 강의 8-1<br>
+  <a></a>class101 신사임당 스마트스토어 강의 7-6<br>
+  <a></a>class101 신사임당 스마트스토어 강의 7-5<br>
+  <a></a>class101 신사임당 스마트스토어 강의 7-4<br>
+  <a></a>class101 신사임당 스마트스토어 강의 7-3<br>
+  <a></a>class101 신사임당 스마트스토어 강의 7-2<br>
+  <a></a>class101 신사임당 스마트스토어 강의 7-1<br>
+  <a></a>class101 신사임당 스마트스토어 강의 6-6<br>
+  <a></a>class101 신사임당 스마트스토어 강의 6-5<br>
+  <a></a>class101 신사임당 스마트스토어 강의 6-4<br>
+  <a></a>class101 신사임당 스마트스토어 강의 6-3<br>
+  <a></a>class101 신사임당 스마트스토어 강의 6-2<br>
+  <a></a>class101 신사임당 스마트스토어 강의 6-1<br>
+  <a></a>class101 신사임당 스마트스토어 강의 5-8<br>
+  <a></a>class101 신사임당 스마트스토어 강의 5-7<br>
+  <a></a>class101 신사임당 스마트스토어 강의 5-6<br>
+  <a></a>class101 신사임당 스마트스토어 강의 5-5<br>
+  <a></a>class101 신사임당 스마트스토어 강의 5-4<br>
+  <a></a>class101 신사임당 스마트스토어 강의 5-3<br>
+  <a></a>class101 신사임당 스마트스토어 강의 5-2<br>
+  <a></a>class101 신사임당 스마트스토어 강의 5-1<br>
+  <a></a>class101 신사임당 스마트스토어 강의 4-5<br>
+  <a></a>class101 신사임당 스마트스토어 강의 4-4<br>
+  <a></a>class101 신사임당 스마트스토어 강의 4-3<br>
+  <a></a>class101 신사임당 스마트스토어 강의 4-2<br>
+  <a></a>class101 신사임당 스마트스토어 강의 4-1<br>
+  <a></a>class101 신사임당 스마트스토어 강의 3-5<br>
+  <a></a>class101 신사임당 스마트스토어 강의 3-4<br>
+  <a></a>class101 신사임당 스마트스토어 강의 3-3<br>
+  <a></a>class101 신사임당 스마트스토어 강의 3-2<br>
+  <a></a>class101 신사임당 스마트스토어 강의 3-1<br>
+  <a></a>class101 신사임당 스마트스토어 강의 2-5<br>
+  <a></a>class101 신사임당 스마트스토어 강의 2-4<br>
+  <a></a>class101 신사임당 스마트스토어 강의 2-3<br>
+  <a></a>class101 신사임당 스마트스토어 강의 2-2<br>
+  <a></a>class101 신사임당 스마트스토어 강의 2-1<br>
+  <a></a>class101 신사임당 스마트스토어 강의 1-4<br>
+  <a></a>class101 신사임당 스마트스토어 강의 1-3<br>
+  <a></a>class101 신사임당 스마트스토어 강의 1-2<br>
+  <a></a>class101 신사임당 스마트스토어 강의 1-1<br>
+  <a></a>class101 신사임당 스마트스토어 강의 0-2<br>
+  <a></a>class101 신사임당 스마트스토어 강의 0-1<br>
 
   <a href="https://www.youtube.com/watch?v=3W0UsssJPIc&t=1s" target="_blank" title="일헥타르TV">
     프로그램없이 쇼핑키워드 찾는 방법｜스마트스토어 노하우</a><br>
