--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -52,7 +52,7 @@
     <img src="인간의아이여.jpg" width="100%">
 
 
-  <h1>Show Yourself[Lv.13]</h1><br><br><br>
+  <h1>Show Yourself[Lv.14]</h1><br><br><br>
 
 
 
@@ -60,6 +60,21 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=DFbVV-rQxak" target="_blank" title="라이프해커자청">
+    연봉 10억을 만들어준 심리학 5개, 4편 뇌욕망의 비밀을 풀다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=FmWq6mIUu00" target="_blank" title="라이프해커자청">
+    나만 알았다면 좋았을 사기급 심리학 기술, 지능의 사생활</a><br>
+
+  <a href="https://www.youtube.com/watch?v=v_ESC-96BKs" target="_blank" title="라이프해커자청">
+    클루지, 나만 알았다면 더 부자가 됐을텐데....</a><br>
+
+  <a href="https://www.youtube.com/watch?v=f2hYXC1A5Nc" target="_blank" title="라이프해커자청">
+    연봉 10억을 만들어준 심리학책 1편 : 정리하는뇌</a><br>
+
+  <a href="https://www.youtube.com/watch?v=fgdSQqDa7sE&t=3s" target="_blank" title="라이프해커자청">
+    오타쿠 흙수저의 인생을 연봉 10억으로 바꿔준 5권의 심리학 책</a><br>
 
   <a href="https://www.youtube.com/watch?v=Tf_iOFQko30&t=74s" target="_blank" title="5분 뚝딱 철학">
     러셀 : 기술이론 (feat. 프레게, 마이농)</a><br>
