--- a/The_war_of_genesis_III.html
+++ b/The_war_of_genesis_III.html
@@ -67,8 +67,14 @@
 
 
 
+  <a></a>
+  class101 자청 자동수익 강의 1-3<br>
+
+  <a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(123120): 2(+4EXP)<br>
+
   <a></a><a></a>
-  PKROMEDA ACTIVATION: 1(+2EXP)<br>
+  PKROMEDA ACTIVATION(123020): 1(+2EXP)<br>
 
   <a></a>
   class101 자청 자동수익 강의 1-2<br>
