--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -61,6 +61,89 @@
 
 
 
+
+
+    <a></a>
+    [스틱! 281p] 개인적 이익은 중요하다. 개인적 이익에 호소하면 사람들의 마음을 끌 수 있으리라는 데에는 의심의 여지가 없다. 그러나 여기에도 한계는 있다. 늘 개인적 이익을 중심으로 메시지를 구축하는 것은 한 가지 색으로만 그림을 그리는 것과 같다. 그것은 우리 눈에는 답답하고 남들 눈에는 지루한 그림이 될 것이다.
+    <br><br>
+
+    <a></a>
+    [스틱! 268-269p] 사람들이 자신들이 얻을 수 있는 혜택으로부터 진정으로 원하는 바는 거대한 규모나 크기가 아니라 확실성이다. 당신은 매력적인 인품도, 부도, 섹스어필도 약속할 필요가 없다. 그저 청중들이 즐거워하는 자신의 모습을 쉽게 떠올릴 수 있는 적당한 혜택을 약속하는 것만으로도 충분하다.
+    <br><br>
+
+    <a></a>
+    [스틱! 265p] 청중에게 이익을 제시할 수 있다면 절대로 그 사실을 숨기지 마라. 이리저리 돌려말하지도 마라. 작고 미묘한 변형마저 커다란 차이를 야기할 수 있다. 케이플스는 개인적인 이익에 관심을 집중시켜야 한다고 말한다. "굿이어 타이어를 사용하는 '사람들'은 안심할 수 있다고 말하지 마라. 굿이어 타이어를 사용하면 '당신'은 안심할 수 있다고 말하라."
+    <br><br>
+
+    <a></a>
+    [스틱! 264p] 케이플스는 회사들이 혜택을 강조해야 할 때 특성을 강조하는 경향이 있다고 말한다. "광고가 실패하는 가장 큰 이유는 광고주가 자신의 능력에 도취된 나머지 우리가 왜 그것을 사야하는지를 말해주길 깜빡한다는 것이다." 광고계에서 가장 오래된 격언은 '혜택 중의 혜택'을 소리 높여 외치라는 것이다. 달리 말해, 사람들은 전기 드릴을 사는 것이 아니다. 그들은 아이들이 그림을 걸 수 있도록 벽에 뚫린 구멍을 사는 것이다.
+    <br><br>
+
+    <a></a>
+    [스틱! 256p] 사람들이 마음을 기울이도록 하는 가장 간단한 방법은, 그들이 이미 각별하게 여기고 있는 것과 그렇지 않은 것을 연합하는 것이다.
+    <br><br>
+
+    <a></a>
+    [스틱! 248p] 일단 분석이라는 모자를 쓰고 나면 우리는 감정적 호소에 전과 다른 방식으로 대응하게 된다. 우리의 '느끼는' 능력을 억제하는 것이다.
+    <br><br>
+
+    <a></a>
+    [스틱! 224p] 통계를 이용할 때 숫자에 연연하지 마라. 숫자는 우리에게 그 아래 내포된 연관성을 알려준다. 하지만 그 연관성을 묘사하는 데에는 숫자보다 더 유용한 방법들이 있다. 사슴과 상어를 대치시키는 방법은 에인스코가 비비탄을 양철 양동이에 쏟아부은 수법과 비슷하다.
+    <br><br>
+
+    <a></a>
+    [스틱! 221p] 통계와 관련해 우리가 할 수 있는 최고의 조언은 그것을 출력이 아니라 입력 대상으로 활용하라는 것이다. 데이터란 어떤 주제에 관해 결정을 내릴 때 사용하는 것이다. 먼저 마음을 굳히고 그것을 뒷받침할 숫자를 찾아서는 안 된다. 매우 달콤한 유혹이긴 하나 결국에는 말썽에 휘말리게 될 것이다. 하지만 통계 수치의 도움을 받아 결정을 굳힌다면 우리는 다른 이들의 마음을 붙들 수 있는 중심 숫자를 공유하게 될 것이다.
+    <br><br>
+
+    <a></a>
+    [스틱! 214p] 통계는 의미를 지니거나 의미를 표현하기 힘들다. 통계는 언제나 '관계'를 묘사하는 데 이용되어야 한다. 진정 중요한 것은 숫자가 아니라, 숫자들 사이의 연관성이다.
+    <br><br>
+
+    <a></a>
+    [스틱! 204p] 진정한 권위는 그 지위가 아니라 출처의 정직성과 신뢰도에서 온다. 그래서 때로는 반권위가 권위보다 훨씬 강력한 힘을 발휘하기도 하는 것이다.
+    <br><br>
+
+    <a></a>
+    [스틱! 141p] 지식의 공백은 흥미를 유발한다. 하지만 지식의 공백이 존재한다는 사실을 입증하기 위해서는 먼저 이미 존재하는 지식을 강조하는 것이 필수적이다. "당신은 이러이러한 것을 안다. 자, 그리고 여기 당신이 모르는 사실이 있다." 우리는 배경을 설정해고, 사람들은 앞으로 무슨 일이 생길지 궁금해하게 된다. 추리소설 작가들과 십자낱말풀이 작가들이 괜히 우리에게 실마리를 던져주는 게 아니다. 퍼즐을 거의 완성했다는 느낌이 든 순간, 호기심은 우리의 정신을 장악하고 결승점을 향해 달려가도록 떠민다.
+    <br><br>
+
+    <a></a>
+    [스틱! 139p] 어떻게 사람들의 흥미를 끌 것인가? 그들의 지식에 공백이 있음을 지적하자. 그렇지만 아예 발판이 될 지식 자체가 부족하다면? (중략) 단순한 '공백'이 아니라 칠흑 같은 심연이 존재한다면? 그런 경우에는 심연을 적절한 지식으로 채워 공백을 마련하자.
+    <br><br>
+
+    <a></a>
+    [스틱! 136p] 우리가 아는 정보의 양이 많아질수록 모르는 사실에 집착하게 된다.
+    <br><br>
+
+    <a></a>
+    [스틱! 134p] 공백 이론은 다른 이들의 부족한 지식을 지적하는 능력에 기대고 있다. 문제는 대부분의 사람들이 자신은 많이 안다고 생각하는 경향이 있다는 것이다. 여러 연구에 의하면 우리는 자기 자신의 지식에 대해 과신하고 있다.
+    <br><br>
+
+    <a></a>
+    [스틱! 131p] 공백 이론에는 전제가 존재한다. 공백을 메우기 전에 먼저 그 공백을 만들어야 한다는 것이다. 우리의 의도는 사람들에게 사실을 말해주는 것이다. 하지만 그 전에 그들은 스스로 그런 사실이 필요하다는 것을 인지해야 한다. 로웬스타인에 따르면, 사람들에게 우리의 메시지가 필요하다고 설득하는 숨은 비결은 그들이 알지 못하는 특정 지식을 강조하는 것이다. 그들의 지식에 공백이 존재함을 알려주는 질문이나 수수께끼를 던져라. 누군가가 그들이 모르는 것을 알고 있다는 암시를 던져라.
+    <br><br>
+
+    <a></a>
+    [스틱! 130p] 호기심은 지식의 공백을 느낄 때 발생한다.
+    로웬스타인은 그렇나 공백이 고통을 야기한다고 주장한다. 무언가에 대해 알고 싶지만 알지 못할 때의 느낌은 손이 닿지 않는 등 한가운데가 근질거릴 때와 비슷하다. 그러한 고통을 제거하기 위해서는 지식의 공백을 메워야만 한다.
+    <br><br>
+
+    <a></a>
+    [스틱! 129p] 다음에는 어떤 일이 벌어질까? 그래서 끝은 어떻게 될까? 우리는 그 해답을 알고 싶다. 그리고 그러한 욕망이 우리의 흥미를 지속시킨다.
+    <br><br>
+
+    <a></a>
+    [스틱! 127p] 미스터리는 예측하지 못한 순간이 아니라 예측하지 못한 여정에서 창조된다. 우리는 목적지를 알고 있다. 미스터리를 해결할 것. 그러나 거기에 어떻게 도달할 수 있을지는 알지 못한다.
+    <br><br>
+
+    <a></a>
+    [스틱! 125p] 미스터리의 힘은 엄청나다고 치알디니는 말한다. 왜냐하면 미스터리는 언제나 결론을 요구하기 때문이다. "'아하!'라는 깨달음의 순간에 만족감이 느껴진다는 얘기는 당신도 들어봤을 것이다. 하지만 만일 '엉?' 다음에 '아하'가 온다면 훨씬 만족스러울 것이다."
+    <br><br>
+
+    <a></a>
+    [메타인지, 생각의 기술] 메타인지는 인지에 대한 인지, 생각에 대한 생각이다. 메타인지적 관점에서 CEO의 가장 중요한 역할 중 하나는 조직 구성원들의 인지와 생각에 대한 가이드를 제시하는 것이다. 많은 구성원들이 CEO처럼 생각하고 행동할 수 있다면, 그 조직의 잠재력은 상상하기가 힘들 정도로 크다. 이것이 조직적 메타인지의 실체이며, 수많은 CEO들이 유념해야 할 사항이다.
+    <br><br>
+
     <a></a>
     [스틱! 114p] 스티커 메시지를 만드는 과정은 다음과 같다.<br>
     1) 당신이 소통해야 할 중심 메시지를 파악한다. 즉, 핵심을 찾아라.<br>
@@ -69,7 +152,7 @@
     <br><br>
 
     <a></a>
-    [스틱! 113p] 자신의 메세지를 스티커처럼 만들고 싶다면 다른 이들의 추측 기제를 망가뜨린 다음 그것을 다시 수리해야 한다. 문제는 추측 기제를 파괴하는 과정에서 늑대 광고와 같은 가짜 놀라움을 핗해야 한다는 것이다. 가짜 놀라움을 예방하고 자신의 놀라운 메시지에 통찰력을 주입하는 가장 손쉬운 방법은 자신의 핵심 메시지와 관련된 사람들의 추측 기제에 초점을 맞추는 것이다.
+    [스틱! 113p] 자신의 메세지를 스티커처럼 만들고 싶다면 다른 이들의 추측 기제를 망가뜨린 다음 그것을 다시 수리해야 한다. 문제는 추측 기제를 파괴하는 과정에서 늑대 광고와 같은 가짜 놀라움을 피해야 한다는 것이다. 가짜 놀라움을 예방하고 자신의 놀라운 메시지에 통찰력을 주입하는 가장 손쉬운 방법은 자신의 핵심 메시지와 관련된 사람들의 추측 기제에 초점을 맞추는 것이다.
     <br><br>
 
     <a></a>
