--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -61,6 +61,12 @@
 
 
 
+
+
+
+  <a href="https://www.youtube.com/watch?v=TlOpvJjgw1k" target="_blank" title="5분 뚝딱 철학">
+    논리적 오류</a><br>
+
   <a href="https://www.youtube.com/watch?v=DFbVV-rQxak" target="_blank" title="라이프해커자청">
     연봉 10억을 만들어준 심리학 5개, 4편 뇌욕망의 비밀을 풀다</a><br>
 
