--- a/The_war_of_genesis_II.html
+++ b/The_war_of_genesis_II.html
@@ -64,6 +64,10 @@
 
 
 
+
+
+  <a></a>안드로이드 JAVA : 02. Java - 21. [과제] 클래스과제 설명
+  <a></a>안드로이드 JAVA : 02. Java - 20. 클래스 (실습)<br>
   <a></a>안드로이드 JAVA : 02. Java - 19. 클래스 (개념)<br>
   <a></a>안드로이드 JAVA : 02. Java - 18. [과제] 중간과제 풀이 영상<br>
   <a></a>안드로이드 JAVA : 02. Java - 17. [과제] 중간과제 설명<br>
