--- a/懲毖錄.html
+++ b/懲毖錄.html
@@ -65,6 +65,16 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=aJfc5024AQo" title="써에이스쇼">
+    삼국지보다 재미있는 정사 초한지 Part 17 (광무 대치)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=YPg6o0Z6CZU" title="써에이스쇼">
+    삼국지보다 재미있는 정사 초한지 Part 16 (배수진)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=lOO8HdWBbvY" title="써에이스쇼">
+    삼국지보다 재미있는 정사 초한지 Part 15 (팽성전투)</a><br>
+
   <a href="https://www.youtube.com/watch?v=RDlCGhQ6l-Y" title="써에이스쇼">
     삼국지보다 재미있는 정사 초한지 Part 14 (진평의 귀순)</a><br>
 
