--- a/The_war_of_genesis_III.html
+++ b/The_war_of_genesis_III.html
@@ -57,7 +57,7 @@
 
 
 
-  <h1>The War of Genesis III[Lv.21]</h1><br><br><br>
+  <h1>The War of Genesis III[Lv.29]</h1><br><br><br>
 
 
 
@@ -66,6 +66,33 @@
 
 
 
+
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(123120): 10(+20EXP)<br>
+
+  <a></a>
+  class101 자청 자동수익 강의 1-5<br>
+
+  <a></a>
+  class101 신사임당 스마트스토어 강의 9-4<br>
+  <a></a>
+  class101 신사임당 스마트스토어 강의 9-3<br>
+  <a></a>
+  class101 신사임당 스마트스토어 강의 9-2<br>
+  <a></a>
+  class101 신사임당 스마트스토어 강의 9-1<br>
+
+  <a></a>
+  class101 자청 자동수익 강의 1-4<br>
+
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(123120): 27(+54EXP)<br>
 
   <a></a>
   class101 자청 자동수익 강의 1-3<br>
