--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -51,7 +51,7 @@
   <div id="contents">
     <img src="swords.gif" width="100%">
 
-    <h1>Ancient Spells[Lv.25]</h1><br><br><br>
+    <h1>Ancient Spells[Lv.27]</h1><br><br><br>
 
 
 
@@ -61,7 +61,14 @@
 
 
 
+    <a></a>
+    [메타인지, 생각의 기술] AI 시대 인간 조직의 경쟁력 중 하나는 맥락에 따른 상대방의 입장을 이해하는 힘이다. 이는 단순한 공감을 넘어 서로의 인지 흐름을 이해하고자 노력할 때 발휘된다. 이를 위해 조직 구성원들은 먼저 상대방이 가진 문제의식이 무엇인지 파악하고자 커뮤니케이션 해야 한다. 그다음에는 문제의식의 원인에 대한 시각이 무엇인지를 파악하고자 커뮤니케이션 해야 한다. 그리고 상대방이 가진 대안과 그 대안이 도출된 전제나 배경을 이해하고자 커뮤니케이션 해야 한다.
+    나아가 어떤 조직이건 당면한 문제의 해결이나 공통의 목표 같은 ‘목적의식’이 있다는 점을 늘 상기해야 한다. 즉 조직적 메타인지가 높은 팀은 공통의 목표를 달성하고자 상대방이 가진 입장을 이해하려고 커뮤니케이션을 한다. 자신의 입장을 일방적으로 전달하기 위한 커뮤니케이션과는 완전히 다르다.
+    <br><br>
 
+    <a></a>
+    [메타인지, 생각의 기술] 그러나 맥락에 비추어 그 대안이 정말 최선인지 물을 수 있는 것이 조직적 메타인지다. 직관의 영역도 사유의 대상으로 끌어내는 것이 조직적 메타인지의 향상을 위해 리더가 해야 하는 일이다.
+    <br><br>
 
     <a></a>
     [스틱! 281p] 개인적 이익은 중요하다. 개인적 이익에 호소하면 사람들의 마음을 끌 수 있으리라는 데에는 의심의 여지가 없다. 그러나 여기에도 한계는 있다. 늘 개인적 이익을 중심으로 메시지를 구축하는 것은 한 가지 색으로만 그림을 그리는 것과 같다. 그것은 우리 눈에는 답답하고 남들 눈에는 지루한 그림이 될 것이다.
@@ -104,7 +111,7 @@
     <br><br>
 
     <a></a>
-    [스틱! 141p] 지식의 공백은 흥미를 유발한다. 하지만 지식의 공백이 존재한다는 사실을 입증하기 위해서는 먼저 이미 존재하는 지식을 강조하는 것이 필수적이다. "당신은 이러이러한 것을 안다. 자, 그리고 여기 당신이 모르는 사실이 있다." 우리는 배경을 설정해고, 사람들은 앞으로 무슨 일이 생길지 궁금해하게 된다. 추리소설 작가들과 십자낱말풀이 작가들이 괜히 우리에게 실마리를 던져주는 게 아니다. 퍼즐을 거의 완성했다는 느낌이 든 순간, 호기심은 우리의 정신을 장악하고 결승점을 향해 달려가도록 떠민다.
+    [스틱! 141p] 지식의 공백은 흥미를 유발한다. 하지만 지식의 공백이 존재한다는 사실을 입증하기 위해서는 먼저 이미 존재하는 지식을 강조하는 것이 필수적이다. "당신은 이러이러한 것을 안다. 자, 그리고 여기 당신이 모르는 사실이 있다." 우리는 배경을 설정했고, 사람들은 앞으로 무슨 일이 생길지 궁금해하게 된다. 추리소설 작가들과 십자낱말풀이 작가들이 괜히 우리에게 실마리를 던져주는 게 아니다. 퍼즐을 거의 완성했다는 느낌이 든 순간, 호기심은 우리의 정신을 장악하고 결승점을 향해 달려가도록 떠민다.
     <br><br>
 
     <a></a>
@@ -125,7 +132,7 @@
 
     <a></a>
     [스틱! 130p] 호기심은 지식의 공백을 느낄 때 발생한다.
-    로웬스타인은 그렇나 공백이 고통을 야기한다고 주장한다. 무언가에 대해 알고 싶지만 알지 못할 때의 느낌은 손이 닿지 않는 등 한가운데가 근질거릴 때와 비슷하다. 그러한 고통을 제거하기 위해서는 지식의 공백을 메워야만 한다.
+    로웬스타인은 그러한 공백이 고통을 야기한다고 주장한다. 무언가에 대해 알고 싶지만 알지 못할 때의 느낌은 손이 닿지 않는 등 한가운데가 근질거릴 때와 비슷하다. 그러한 고통을 제거하기 위해서는 지식의 공백을 메워야만 한다.
     <br><br>
 
     <a></a>
