--- a/The_war_of_genesis_III.html
+++ b/The_war_of_genesis_III.html
@@ -57,7 +57,7 @@
 
 
 
-  <h1>The War of Genesis III[Lv.29]</h1><br><br><br>
+  <h1>The War of Genesis III[Lv.30]</h1><br><br><br>
 
 
 
@@ -66,10 +66,16 @@
 
 
 
+
+  <a></a>
+  class101 자청 자동수익 강의 1-6<br>
+
+  <a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(010421): 2(+4EXP)<br>
 
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
-  PKROMEDA ACTIVATION(123120): 10(+20EXP)<br>
+  PKROMEDA ACTIVATION(010121): 10(+20EXP)<br>
 
   <a></a>
   class101 자청 자동수익 강의 1-5<br>
@@ -92,7 +98,7 @@
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
   <a></a><a></a><a></a><a></a>
-  PKROMEDA ACTIVATION(123120): 27(+54EXP)<br>
+  PKROMEDA ACTIVATION(010121): 27(+54EXP)<br>
 
   <a></a>
   class101 자청 자동수익 강의 1-3<br>
