--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -191,11 +191,11 @@
     <br><br>
 
     <a></a>
-    [스틱! 97-98p] 단순성을 추구하는 이들에게, 속담은 곧 성배다. 짧고 간결한 문구를 만들어내는 것은 간단하다. 약간의 체계성만 갖추고 있으면 누구라도 할 수 있다. 하지만 심오하고 간결한 문구를 만들어내는 것은 엄청나게 어려운 일이다. 그럼에도 우리가 말하고자 하는 바는, 그러한 노력은 그만 한 가치가 있다는 것이다. 핵심을 찾고 간결하게 표현하라. 그 엄청난 위력을 확인하게 될 것이다.
+    [스틱! 97-98p] 단순성을 추구하는 이들에게, 속담은 곧 성배다. 짧고 간결한 문구를 만들어내는 것은 간단하다. 약간의 체계성만 갖추고 있으면 누구라도 할 수 있다. 하지만 심오하고 간결한 문구를 만들어내는 것은 엄청나게 어려운 일이다. 그럼에도 우리가 말하고자 하는 바는, 그러한 노력은 그만한 가치가 있다는 것이다. 핵심을 찾고 간결하게 표현하라. 그 엄청난 위력을 확인하게 될 것이다.
     <br><br>
 
     <a></a>
-    [스틱! 91p] 무익한 정확성과 기타 다양한 '지식의 저주'를 피해갈 수 있는 최선의 예방책 중 하나가 바로 비유법이다. 포멜로는 그레이프프루트와 유사하다. 좋은 뉴스 기사는 거꾸로 선 피라미드와 같은 구조를 갖추고 있다. 피부손상은 노화와 비슷하다. 비유법은 당신이 이미 알고 있느느 개념을 연상시킴으로써 간결한 메시지를 더욱 이해하기 쉽게 만든다.
+    [스틱! 91p] 무익한 정확성과 기타 다양한 '지식의 저주'를 피해갈 수 있는 최선의 예방책 중 하나가 바로 비유법이다. 포멜로는 그레이프프루트와 유사하다. 좋은 뉴스 기사는 거꾸로 선 피라미드와 같은 구조를 갖추고 있다. 피부손상은 노화와 비슷하다. 비유법은 당신이 이미 알고 있는 개념을 연상시킴으로써 간결한 메시지를 더욱 이해하기 쉽게 만든다.
     <br><br>
 
     <a></a>
@@ -204,12 +204,12 @@
     <br><br>
 
     <a></a>
-    [스틱! 84p] 간결한 메시지는 더 잘 달라붙는다. 하짐나 간결함 그 자체만으로는 아무런 쓸모도 없다. 진정으로 가치 있는 것은 심오한 내용을 지닌 간결한 메시지다. 그러므로 심오한 메시지를 간결하게 만들기 위해서는 짧은 메시지 안에 다양한 의미를 압축하여 채워넣어야 한다. 어떻게? 깃발을 사용하라. 청중이 이미 가지고 있는 기억을 두드려 깨워라. 이미 존재하는 것을 활용하는 것이다.
+    [스틱! 84p] 간결한 메시지는 더 잘 달라붙는다. 하지만 간결함 그 자체만으로는 아무런 쓸모도 없다. 진정으로 가치 있는 것은 심오한 내용을 지닌 간결한 메시지다. 그러므로 심오한 메시지를 간결하게 만들기 위해서는 짧은 메시지 안에 다양한 의미를 압축하여 채워넣어야 한다. 어떻게? 깃발을 사용하라. 청중이 이미 가지고 있는 기억을 두드려 깨워라. 이미 존재하는 것을 활용하는 것이다.
     <br><br>
 
     <a></a>
     [스틱! 76p] 문장은 언제나 단락보다 낫다. 핵심 요지는 다섯 개보다 두 개가 낫고, 쉬운 단어가 어려운 단어보다 낫다. 세상 무엇보다 단순한 규칙이다. 담겨 있는 정보의 양이 줄수록 메시지는 잘 달라붙는다.
-    하지만 간결함만으로는 충분하지 않다. 핵심이 없는 간결하기만 한 메시지에 집착할 수도 있기 때문이다. 다시 말해, 간결한 슬로건이라고 모두가 지휘관의 의도를 반여앟고 있지는 않다는 의미다. 간결한 메시지는 스티커처럼 끈끈할지는 몰라도 아무런 가치도 없다. 거짓일 수도 있고('지구는 평평하다'), 아무런 연관도 없거나('염소는 새싹 같다'), 잘못된 내용을 담고 있을 수도 있다('하루라도 신발을 사지 않으면 입 안에 가시가 돋는다').
+    하지만 간결함만으로는 충분하지 않다. 핵심이 없는 간결하기만 한 메시지에 집착할 수도 있기 때문이다. 다시 말해, 간결한 슬로건이라고 모두가 지휘관의 의도를 반영하고 있지는 않다는 의미다. 간결한 메시지는 스티커처럼 끈끈할지는 몰라도 아무런 가치도 없다. 거짓일 수도 있고('지구는 평평하다'), 아무런 연관도 없거나('염소는 새싹 같다'), 잘못된 내용을 담고 있을 수도 있다('하루라도 신발을 사지 않으면 입 안에 가시가 돋는다').
     <br><br>
 
     <a></a>
@@ -226,7 +226,7 @@
     <br><br>
 
     <a></a>
-    [스틱! 59-60p] 리드를 쓰는 과정, 그리고 리드의 실종으르 막아내는 과정은 메시지의 핵심을 찾는 과정과 정확하게 맞아떨어지는 유용한 메타포다. 핵심을 발견하고 리드를 쓰는 행위는 모두 '우선순위 강제 지정(forced prioritization)'에 속한다. 당신이 종군 기자라고 치자. 통신망이 끊기기 전에 보낼 수 있는 기사가 단 한 문장뿐이라면 어떤 문장을 쓰겠는가? 리드는 단 하나뿐이다. 핵심도 단 하나뿐이다.
+    [스틱! 59-60p] 리드를 쓰는 과정, 그리고 리드의 실종을 막아내는 과정은 메시지의 핵심을 찾는 과정과 정확하게 맞아떨어지는 유용한 메타포다. 핵심을 발견하고 리드를 쓰는 행위는 모두 '우선순위 강제 지정(forced prioritization)'에 속한다. 당신이 종군 기자라고 치자. 통신망이 끊기기 전에 보낼 수 있는 기사가 단 한 문장뿐이라면 어떤 문장을 쓰겠는가? 리드는 단 하나뿐이다. 핵심도 단 하나뿐이다.
     우선순위를 강제로 지정하는 것은 참으로 고통스러운 일이다. 똑똑한 사람들은 문장 하나하나의 가치를 알고 있으며 뉘앙스의 차이를 이해하고 다양한 관점을 고루 살펴본다. 그들은 상황의 복잡성을 완전히 이해하고 있기 때문에 그것을 고수하고 싶다는 유혹에 시달린다. 지금 이 순간에도 이렇게 복잡성을 유지하고자 하는 경향은 우선순위를 지정해야 하는 필요성과 영원한 전쟁을 벌이고 있다.
     <br><br>
 
