--- a/The_war_of_genesis_II.html
+++ b/The_war_of_genesis_II.html
@@ -65,6 +65,10 @@
 
 
 
+  <a></a>안드로이드 JAVA : 02. Java - 26. 인터페이스 실습<br>
+  <a></a>안드로이드 JAVA : 02. Java - 25. 인터페이스 개념<br>
+  <a></a>안드로이드 JAVA : 02. Java - 24. 상속 (실습)<br>
+  <a></a>안드로이드 JAVA : 02. Java - 23. 상속 (개념)<br>
   <a></a>안드로이드 JAVA : 02. Java - 22. 클래스과제 풀이<br>
   <a></a>안드로이드 JAVA : 02. Java - 21. [과제] 클래스과제 설명<br>
   <a></a>안드로이드 JAVA : 02. Java - 20. 클래스 (실습)<br>
