--- a/The_war_of_genesis_III.html
+++ b/The_war_of_genesis_III.html
@@ -57,7 +57,7 @@
 
 
 
-  <h1>The War of Genesis III[Lv.30]</h1><br><br><br>
+  <h1>The War of Genesis III[Lv.34]</h1><br><br><br>
 
 
 
@@ -66,6 +66,39 @@
 
 
 
+
+
+
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(010821): 5(+10EXP)<br>
+
+  <a></a>
+  class101 자청 자동수익 강의 2-4<br>
+
+  <a></a><a></a>
+  PKROMEDA ACTIVATION(010821): 1(+2EXP)<br>
+
+  <a></a>
+  class101 자청 자동수익 강의 2-3<br>
+
+  <a></a><a></a>
+  PKROMEDA CS(010821): 1(+2EXP)<br>
+
+  <a></a>
+  class101 자청 자동수익 강의 2-2<br>
+
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(010621): 7(+14EXP)<br>
+
+  <a></a>
+  class101 자청 자동수익 강의 2-1<br>
+
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(010521): 5(+10EXP)<br>
+
+  <a></a>
+  class101 자청 자동수익 강의 1-7<br>
 
   <a></a>
   class101 자청 자동수익 강의 1-6<br>
