--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -62,6 +62,36 @@
 
 
     <a></a>
+    [스틱! 317p] 우리는 스토리를 무시하고 곧바로 '팁'으로 달려들고자 하는 유혹을 떨쳐버려야 한다.
+    <br><br>
+
+    <a></a>
+    [스틱! 315p] 이것이 바로 스토리의 역할이다. 지식을 보다 일상적이고 근원적인 존재, 삶에 가까운 형태로 만들어 보여주는 것. 스토리는 비행 시뮬레이터와 비슷하다. 스토리의 청취자가 된다는 것은 그리 수동적인 역할이 아니다. 우리는 그 안에서 행동할 준비를 갖추기 때문이다.
+    <br><br>
+
+    <a></a>
+    [스틱! 314p] 스토리가 강력한 까닭은 추상적인 개념에서 찾아볼 수 없는 맥락을 제공하기 때문이다.
+    <br><br>
+
+    <a></a>
+    [스틱! 314p] 적절한 스토리는 곧 시뮬레이션과 같은 효과를 낸다는 것이다. 스토리는 뇌를 위한 시뮬레이션이다.
+    <br><br>
+
+    <a></a>
+    [스틱! 312p] 연상 시뮬레이션은 감정을 통제하도록 도와준다. 거미, 많은 사람들 앞에서 말하기, 비행기 여행 등 다양한 종류의 공포증을 치료하는 기본 요법을 생각해보라. 환자들은 먼저 불안한 감정을 억누르는 감정 이완 절차를 학습하고, 다음으로 두려워하는 것에 노출되는 과정을 시각화한다. 시각화는 공포의 가장자리에서부터 시작된다. 예를 들어, 비행기 타는 것을 두려워하는 사람은 제일 먼저 공항을 향해 운전하는 장면을 떠올린다. 심리치료사는 환자가 시각화를 통해 점점 더 두려움의 핵심으로 다가갈 수 있도록 이끌고, 불안감이 들 때마다 환자는 잠시 시각화를 멈추고 마음을 안정시키는 기술을 이용해 평정을 유지한다.
+    이런 시각화는 사건 그 자체에 집중된다. 즉, 결과가 아니라 과정에 초점을 맞추는 것이다. 문제를 해결하고 나면 얼마나 행복할지 상상함으로써 공포증이나 강박관념을 치료한 사례는 눈 씻고 찾아봐도 없다.
+    <br><br>
+
+    <a></a>
+    [스틱! 296-297p] 사람들이 우리의 메시지를 각별히 여기게 하려면 어떻게 해야 할까? 그들의 분석 모자를 벗겨야 한다. 특정 개인에게 연민을 느끼도록 만들어야 한다. 우리의 메시지가 그들이 중요하게 생각하는 무언가와 결합되어 있음을 보여주어야 한다. 우리는 그들의 이익에 호소하되, 그들의 정체성에도 호소해야 한다. 그들의 현재뿐 아니라 그들이 되고 싶은 미래의 이상향에도 호소해야 한다.
+    그리고 청중에게 '좋은 것'을 생각하는 한편 매슬로의 하위 단계에서 벗어나 위로 올라가야 한다. 우리는 청중들에게 250 달러가 아니라 미학 욕구나 초월 욕구를 충족시킬 무언가를 제공해야 한다. 플로이드 리는 말했다. "나는 단순히 병사들의 식사를 책임지고 있는 것이 아니다. 나는 그들의 사기를 책임지고 있다." 사람들은 대부분 플로이드 같은 리더를 원한다.
+    <br><br>
+
+    <a></a>
+    [스틱! 294p] '왜?' 전술은 지식의 저주를 피해가는 데 매우 유용하다. "왜?"라는 질문을 던지는 것은 우리의 메시지 아래 놓여 있는 핵심 원리와 핵심 가치를 상기하는데 보탬이 된다.
+    <br><br>
+
+    <a></a>
     [메타인지, 생각의 기술] AI 시대 인간 조직의 경쟁력 중 하나는 맥락에 따른 상대방의 입장을 이해하는 힘이다. 이는 단순한 공감을 넘어 서로의 인지 흐름을 이해하고자 노력할 때 발휘된다. 이를 위해 조직 구성원들은 먼저 상대방이 가진 문제의식이 무엇인지 파악하고자 커뮤니케이션 해야 한다. 그다음에는 문제의식의 원인에 대한 시각이 무엇인지를 파악하고자 커뮤니케이션 해야 한다. 그리고 상대방이 가진 대안과 그 대안이 도출된 전제나 배경을 이해하고자 커뮤니케이션 해야 한다.
     나아가 어떤 조직이건 당면한 문제의 해결이나 공통의 목표 같은 ‘목적의식’이 있다는 점을 늘 상기해야 한다. 즉 조직적 메타인지가 높은 팀은 공통의 목표를 달성하고자 상대방이 가진 입장을 이해하려고 커뮤니케이션을 한다. 자신의 입장을 일방적으로 전달하기 위한 커뮤니케이션과는 완전히 다르다.
     <br><br>
